--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-20 [每日一语 2024.12.20](/articles/cdt/334364.md)
+
 12-20 [青年志Youthology｜2024，微微存活](/articles/cdt/334375.md)
 
 12-20 [每日一语 2024.12.18](/articles/cdt/334382.md)
@@ -598,6 +600,4 @@
 11-14 [【CDT关注】Never Forget｜从中国冒险逃离后，他的麻烦才真正开始](/articles/cdt/335521.md)
 
 11-14 [豫广｜一个夜骑开封大学生的自白](/articles/cdt/335528.md)
-
-11-13 [常识流通处｜杀害一个人，世人常有恻隐之心；但是，消灭一个符号呢？](/articles/cdt/335531.md)
 
