--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-20 [特朗普威胁欧盟：若不多买美国油气，加关税](/articles/dw/1023335.md)
+
 12-20 [普京年终盘点：一场四个半小时的个人秀](/articles/dw/1023336.md)
 
 12-20 [抗议团体爬上柏林地标勃兰登堡门 声援叙利亚库尔德族](/articles/dw/1023337.md)
@@ -598,6 +600,4 @@
 11-21 [專訪《從今以後》導演：同志伴侶在香港受什麼保障？](/articles/dw/1023633.md)
 
 11-20 [工会建议大众员工降薪、福特计划裁员14%](/articles/dw/1023634.md)
-
-11-20 [拜登批准乌军使用杀伤人员地雷](/articles/dw/1023635.md)
 
