--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-20 [中国海警称将一架“非法侵入”的菲律宾飞机从斯卡伯勒浅滩上空驱离](/articles/voa/1010174.md)
+
 12-20 [英国对华立场转向：英财政大臣里夫斯下月访华重启两国高层对话机制](/articles/voa/1010175.md)
 
 12-20 [习近平为澳门新特首等官员监誓，呼吁当地经济适度多元化发展](/articles/voa/1010176.md)
@@ -598,6 +600,4 @@
 12-8 [美国官员：美国指责中国窃听“非常高层”政治人物电话](/articles/voa/1010472.md)
 
 12-8 [内塔尼亚胡批评堪培拉纵容反犹势力，澳官方誓言反犹言行无立足之地](/articles/voa/1010473.md)
-
-12-8 [世界媒体看中国 - 新一轮贸易战赢家与输家](/articles/voa/1010474.md)
 
