--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-21 [CECC年度报告关注西方公司助力中共强迫劳动、强摘器官等侵犯人权行为](/articles/voa/1010170.md)
+
 12-21 [拜登卸任前全速将剩余资金变成军援交给基辅，G7考虑进一步压低俄原油价格](/articles/voa/1010171.md)
 
 12-21 [美国高级外交官在大马士革与叙利亚新统治者举行会晤](/articles/voa/1010172.md)
@@ -598,6 +600,4 @@
 12-8 [叙利亚反政府武装争夺霍姆斯并向大马士革推进，阿萨德统治危在旦夕](/articles/voa/1010468.md)
 
 12-8 [中国在巴基斯坦和阿富汗之间进行调解以保护自身利益能成功吗？](/articles/voa/1010469.md)
-
-12-8 [特朗普2.0 台积电在美国将面临什么挑战与机会？](/articles/voa/1010470.md)
 
