--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-21 [专家：美国对无处不在的中国黑客行为应对迟缓](/articles/voa/1010161.md)
+
 12-21 [美众议院通过了维持联邦政府运转的临时支出法案](/articles/voa/1010162.md)
 
 12-21 [网络战与心理战结合：中国试图依靠“认知域作战”扩大主导地位](/articles/voa/1010163.md)
@@ -598,6 +600,4 @@
 12-8 [叙利亚局势突变！中国政府呼吁叙有关方面确保中国公民安全](/articles/voa/1010459.md)
 
 12-8 [中国拟在政府采购中优待国产品 分析：进一步走向固步自封](/articles/voa/1010460.md)
-
-12-8 [中共党媒高层董郁玉被以间谍罪判刑 家属提十大质疑](/articles/voa/1010461.md)
 
