--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-21 [世界媒体看中国：“刀刃向内”形势诡异](/articles/voa/1010158.md)
+
 12-21 [美政府换届在即 台北AIT处长确认美台伙伴关系“坚如磐石”](/articles/voa/1010159.md)
 
 12-21 [立陶宛在与中国的关系上面临艰难平衡](/articles/voa/1010160.md)
@@ -598,6 +600,4 @@
 12-9 [特朗普2.0对回暖的中澳关系意味着什么？](/articles/voa/1010456.md)
 
 12-9 [特朗普呼吁俄乌立即停火，基辅与莫斯科分别作出回应](/articles/voa/1010457.md)
-
-12-8 [新军演前兆？解放军出动七架次军机和14艘舰艇在台湾周边海空域活动](/articles/voa/1010458.md)
 
