--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-21 [【404文库】基本常识｜那些你以为“大逆不道”的话，在地铁站大屏播出来也没啥](/articles/cdt/334343.md)
+
 12-20 [每日一语 2024.12.20](/articles/cdt/334364.md)
 
 12-20 [顶端新闻｜天津一事业单位招本科生参与“掏粪”？有249人报名，招聘单位回应](/articles/cdt/334368.md)
@@ -598,6 +600,4 @@
 11-14 [老萧杂说｜对珠海驾车撞人凶犯不能止于标签化](/articles/cdt/335515.md)
 
 11-18 [【CDT报告汇】开放技术基金会：中国APP设置“数字门槛”将海外用户挡在墙外（外二篇）](/articles/cdt/335516.md)
-
-11-14 [【麻辣总局】“若遇到极端驾车冲撞，牢记以下技巧”](/articles/cdt/335519.md)
 
