--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-21 [卸任前夕 拜登再批准5.7亿美元对台军援](/articles/dw/1023333.md)
+
 12-20 [俄罗斯对基辅发动大规模导弹袭击](/articles/dw/1023334.md)
 
 12-20 [特朗普威胁欧盟：若不多买美国油气，加关税](/articles/dw/1023335.md)
@@ -598,6 +600,4 @@
 11-21 [俄罗斯反对派海外首次大型反战示威](/articles/dw/1023631.md)
 
 11-21 [習近平拉攏盧拉 中國升級與巴西雙邊關係](/articles/dw/1023632.md)
-
-11-21 [專訪《從今以後》導演：同志伴侶在香港受什麼保障？](/articles/dw/1023633.md)
 
