--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-21 [卸任前夕 拜登再批准5.7亿美元对台军援](/articles/voa/1010154.md)
+
 12-21 [美国导弹测试期间 七名中国公民试图非法进入关岛](/articles/voa/1010155.md)
 
 12-21 [中国航天员成功完成9小时出舱任务 打破世界纪录](/articles/voa/1010156.md)
@@ -598,6 +600,4 @@
 12-9 [俄罗斯国家媒体报道 阿萨德已逃往莫斯科](/articles/voa/1010452.md)
 
 12-9 [阿萨德倒台后 叙利亚北部城市战斗越来越激烈](/articles/voa/1010453.md)
-
-12-9 [反政府武装推翻阿萨德政权后 联合国呼吁叙利亚要团结](/articles/voa/1010454.md)
 
