--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-21 [德国大众许诺不关厂但会裁员3.5万](/articles/dw/1023332.md)
+
 12-21 [卸任前夕 拜登再批准5.7亿美元对台军援](/articles/dw/1023333.md)
 
 12-20 [俄罗斯对基辅发动大规模导弹袭击](/articles/dw/1023334.md)
@@ -598,6 +600,4 @@
 11-21 [默克尔回忆录谈及为何阻乌克兰入北约](/articles/dw/1023630.md)
 
 11-21 [俄罗斯反对派海外首次大型反战示威](/articles/dw/1023631.md)
-
-11-21 [習近平拉攏盧拉 中國升級與巴西雙邊關係](/articles/dw/1023632.md)
 
