--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-21 [当“刀刃向内”遇上“集体领导”分析:中共党报与军报论战无助经济恢复](/articles/voa/1010149.md)
+
 12-21 [教宗方济各发布圣诞文告抨击以色列“残酷”空袭加沙](/articles/voa/1010150.md)
 
 12-21 [黎智英是怎样的“麻烦制造者”？](/articles/voa/1010151.md)
@@ -598,6 +600,4 @@
 12-9 [世界对叙利亚阿萨德统治终结的反应](/articles/voa/1010447.md)
 
 12-9 [时间轴：阿萨德垮台前经历了多年的流血和分裂](/articles/voa/1010448.md)
-
-12-9 [拜登：阿萨德的叙利亚崩溃是“根本的正义行为”](/articles/voa/1010449.md)
 
