--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-21 [剥洋葱people｜余华英案重审二审，她们在新闻直播间举牌寻亲](/articles/cdt/334337.md)
+
 12-21 [【404文库】基本常识｜地铁投放的基本常识被撤档，文章也被删除啦](/articles/cdt/334338.md)
 
 12-21 [常识流通处｜“远洋捕捞”的网，撒向了一群女性作者](/articles/cdt/334341.md)
@@ -598,6 +600,4 @@
 11-14 [每日一语 2024.11.13](/articles/cdt/335507.md)
 
 11-14 [每日一语 2024.11.12](/articles/cdt/335509.md)
-
-11-14 [每日一语 2024.11.12](/articles/cdt/335513.md)
 
