--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-22 [每日一语 2024.12.21](/articles/cdt/334323.md)
+
 12-22 [朱令我们在一起｜清华大学在朱令案中的冷血与无耻，我如何成了救助朱令的长期志愿者](/articles/cdt/334335.md)
 
 12-21 [剥洋葱people｜余华英案重审二审，她们在新闻直播间举牌寻亲](/articles/cdt/334337.md)
@@ -598,6 +600,4 @@
 11-15 [冰川思享号｜教授鼓励年轻人啃老，有一种鸡汤叫“媚青”](/articles/cdt/335493.md)
 
 11-15 [齐物学堂｜街头阳刚：作为公众表演的男性谋杀-自杀行为](/articles/cdt/335495.md)
-
-11-14 [观人随笔｜突发事件信息发布不能被垄断](/articles/cdt/335505.md)
 
