--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-22 [美国军舰红海误击己方战机 两名飞行员幸存](/articles/dw/1023321.md)
+
 12-22 [客座评论：从线性发展到通货紧缩的怪圈](/articles/dw/1023322.md)
 
 12-22 [圣诞市场袭击案 马斯克要求德国总理辞职](/articles/dw/1023323.md)
@@ -598,6 +600,4 @@
 11-22 [美国得克萨斯州切断与中国的投资关系](/articles/dw/1023619.md)
 
 11-22 [客座评论：北京的四条红线——习近平的“热战”信号](/articles/dw/1023620.md)
-
-11-22 [失去Chrome，谷歌会怎样？](/articles/dw/1023621.md)
 
