--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-22 [中国“坚决反对”美对台军售 专家预测台湾将向特朗普提交雄心勃勃的安全计划](/articles/voa/1010138.md)
+
 12-22 [批收费不公、中国影响力增强 特朗普威胁夺回巴拿马运河的控制权](/articles/voa/1010139.md)
 
 12-22 [美军超级大黄蜂战机在红海上空遭“友军误击” 2飞行员获救](/articles/voa/1010140.md)
@@ -598,6 +600,4 @@
 12-10 [中国对英伟达展开报复性调查，美中芯片战再升级](/articles/voa/1010436.md)
 
 12-10 [再为疲软经济输血，中共政治局14年来首次承诺放松货币政策](/articles/voa/1010437.md)
-
-12-10 [中国出动90艘舰船似沿整个第一岛链军演，台湾保持高度警戒](/articles/voa/1010438.md)
 
