--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-22 [特朗普人工智能新政：松绑监管，支持创新，击败中国](/articles/voa/1010134.md)
+
 12-22 [哈马斯及巴勒斯坦组织称：比任何时刻都接近达成加沙停火协议](/articles/voa/1010135.md)
 
 12-22 [促叙利亚新政府解决库尔德民兵组织 土耳其示警“不惜一切代价”回应](/articles/voa/1010136.md)
@@ -598,6 +600,4 @@
 12-10 [TikTok要求联邦上诉法院禁止执行潜在禁令，直至美最高法院审理](/articles/voa/1010432.md)
 
 12-10 [遏制中国影响力，澳大利亚与瑙鲁签订里程碑式安全协议](/articles/voa/1010433.md)
-
-12-10 [国际人权日:人权人士说，2024年中国对人权的侵害范围越来越广](/articles/voa/1010434.md)
 
