--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-22 [八名中国涉疆涉藏官员遭渥太华制裁后，北京对加相关机构及人员反制](/articles/voa/1010133.md)
+
 12-22 [特朗普人工智能新政：松绑监管，支持创新，击败中国](/articles/voa/1010134.md)
 
 12-22 [哈马斯及巴勒斯坦组织称：比任何时刻都接近达成加沙停火协议](/articles/voa/1010135.md)
@@ -598,6 +600,4 @@
 12-10 [叙利亚反政府武装领导人和即将卸任的总理讨论权力移交](/articles/voa/1010431.md)
 
 12-10 [TikTok要求联邦上诉法院禁止执行潜在禁令，直至美最高法院审理](/articles/voa/1010432.md)
-
-12-10 [遏制中国影响力，澳大利亚与瑙鲁签订里程碑式安全协议](/articles/voa/1010433.md)
 
