--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-23 [墙外文摘：学者“进入中国”就能产出真知灼见？](/articles/dw/1023313.md)
+
 12-22 [特朗普：巴拿马运河若不降费则应归还美国](/articles/dw/1023314.md)
 
 12-22 [美国军舰红海误击己方战机](/articles/dw/1023315.md)
@@ -598,6 +600,4 @@
 11-23 [菲律宾副总统语出惊人 已雇人刺杀总统](/articles/dw/1023611.md)
 
 11-23 [棋王赛史上首次！亚洲棋手的巅峰对决](/articles/dw/1023612.md)
-
-11-22 [中国增加对9国单方面免签 日本表示欢迎](/articles/dw/1023613.md)
 
