--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-23 [基辅指控俄军处决五名乌军战俘，俄乌继续以无人机袭击对方](/articles/voa/1010131.md)
+
 12-23 [被疑割断波罗的海海底电缆的中国货轮驶离丹麦瑞典水域](/articles/voa/1010132.md)
 
 12-22 [八名中国涉疆涉藏官员遭渥太华制裁后，北京对加相关机构及人员反制](/articles/voa/1010133.md)
@@ -598,6 +600,4 @@
 12-10 [缅甸主要反政俯武装组织派代表团前往中国会谈](/articles/voa/1010429.md)
 
 12-10 [参院外委会主席卡丁推出法案，要求正式终止香港特殊待遇，给予在美港人临时保护](/articles/voa/1010430.md)
-
-12-10 [叙利亚反政府武装领导人和即将卸任的总理讨论权力移交](/articles/voa/1010431.md)
 
