--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-23 [媒体报道：3100多名美国土著人儿童在美国寄宿学校死亡](/articles/voa/1010126.md)
+
 12-23 [普京在克里姆林宫会见斯洛伐克总理](/articles/voa/1010127.md)
 
 12-23 [特朗普：TikTok可能值得在美国保留一段时间](/articles/voa/1010128.md)
@@ -598,6 +600,4 @@
 12-10 [2024年：失业问题继续困扰中国青年](/articles/voa/1010424.md)
 
 12-10 [若2027年中国侵台提前上演 美印太司令：有信心在台海冲突赢过中国](/articles/voa/1010425.md)
-
-12-10 [泽连斯基愿意考虑谈判结束与俄罗斯的战争](/articles/voa/1010426.md)
 
