--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-23 [阿尔巴尼亚总理：封禁TikTok并非“对单一事件的仓促反应”](/articles/voa/1010124.md)
+
+12-23 [叙利亚新领导人：所有武器将受“国家控制”](/articles/voa/1010125.md)
+
 12-23 [媒体报道：3100多名美国土著人儿童在美国寄宿学校死亡](/articles/voa/1010126.md)
 
 12-23 [普京在克里姆林宫会见斯洛伐克总理](/articles/voa/1010127.md)
@@ -596,8 +600,4 @@
 12-10 [少数民族武装团体声称占领缅甸西部主要边境](/articles/voa/1010422.md)
 
 12-10 [媒体大亨默多克试图更改家族信托失败](/articles/voa/1010423.md)
-
-12-10 [2024年：失业问题继续困扰中国青年](/articles/voa/1010424.md)
-
-12-10 [若2027年中国侵台提前上演 美印太司令：有信心在台海冲突赢过中国](/articles/voa/1010425.md)
 
