--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 12-23 [张3丰的世界｜总要有人做记者](/articles/cdt/334310.md)
 
+12-23 [【CDT报告汇】AEP：中式人工智能充满党性，政治审查严重（外二篇）](/articles/cdt/334311.md)
+
 12-23 [每日一语 2024.12.22](/articles/cdt/334313.md)
 
 12-23 [【重温】中国新闻周刊｜南昌女子被送精神病院事件调查，该院强制他人入院曾败诉](/articles/cdt/334314.md)
@@ -598,6 +600,4 @@
 11-15 [【404文库】新周刊｜34岁单亲妈妈，带女儿入住烂尾楼的76天](/articles/cdt/335455.md)
 
 11-15 [建设性意见｜顶刊《柳叶刀》发表中成药大规模随机双盲试验结果！居然……](/articles/cdt/335458.md)
-
-11-15 [每日一语 2024.11.14](/articles/cdt/335464.md)
 
