--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-23 [袭击德国圣诞市场的塔勒布·A究竟何人？](/articles/dw/1023308.md)
+
 12-23 [特朗普暗示TikTok短期不会遭禁](/articles/dw/1023309.md)
 
 12-23 [特朗普上任之初即退出世界卫生组织？](/articles/dw/1023310.md)
@@ -598,6 +600,4 @@
 11-24 [欧盟调查之下Temu仍势不可挡？](/articles/dw/1023606.md)
 
 11-24 [中国导演及演员横扫台湾金马奖三项大奖](/articles/dw/1023607.md)
-
-11-23 [特朗普提名更多内阁人选 一华裔被提名副国安顾问](/articles/dw/1023608.md)
 
