--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-23 [特朗普：控制格林兰岛绝对必要](/articles/dw/1023307.md)
+
 12-23 [袭击德国圣诞市场的塔勒布·A究竟何人？](/articles/dw/1023308.md)
 
 12-23 [特朗普暗示TikTok短期不会遭禁](/articles/dw/1023309.md)
@@ -598,6 +600,4 @@
 11-24 [澳大利亚拟禁止16岁以下未成年人使用社媒](/articles/dw/1023605.md)
 
 11-24 [欧盟调查之下Temu仍势不可挡？](/articles/dw/1023606.md)
-
-11-24 [中国导演及演员横扫台湾金马奖三项大奖](/articles/dw/1023607.md)
 
