--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-23 [平壤再搅局，准备向俄派遣更多部队及无人机](/articles/voa/1010119.md)
+
 12-23 [年终报道：2024年中国股市如“过山车”—政策刺激难改颓势](/articles/voa/1010120.md)
 
 12-23 [突破重重挑战 台湾新剧《零日攻击》直面中国入侵威胁](/articles/voa/1010121.md)
@@ -598,6 +600,4 @@
 12-10 [太平洋岛国担心特朗普重入白宫后美中竞争加剧导致地区对抗](/articles/voa/1010417.md)
 
 12-10 [绝望的叙利亚人在臭名昭著的赛德纳亚监狱搜寻失踪亲人](/articles/voa/1010418.md)
-
-12-10 [地球土地正在干涸；各国试图在本周会谈中应对此问题](/articles/voa/1010419.md)
 
