--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-23 [中国拒绝瑞典检方登上“伊鹏3号”调查](/articles/dw/1023304.md)
+
 12-23 [美国宣布对中国传统芯片展开贸易调查](/articles/dw/1023305.md)
 
 12-23 [不想“断气”： 斯洛伐克总理突访莫斯科](/articles/dw/1023306.md)
@@ -598,6 +600,4 @@
 11-24 [攻击俄罗斯境内目标 乌克兰获准使用哪些西方武器？](/articles/dw/1023602.md)
 
 11-24 [拜登批准乌军使用杀伤人员地雷  普京降低核战争门槛](/articles/dw/1023603.md)
-
-11-24 [研究报告：中国重新加大对太平洋岛国的投资力度](/articles/dw/1023604.md)
 
