--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-24 [李宜雪二度“被精神病”，中国网民炸锅质疑声四起](/articles/voa/1010115.md)
+
+12-24 [中国湖南常德驾车冲撞恶性案肇事者被判死缓，网民抱怨判得太轻](/articles/voa/1010116.md)
+
 12-23 [聿文视界：应对美国围堵压力，中国押“宝”单边开放](/articles/voa/1010117.md)
 
 12-23 [拜登政府宣布对中国产传统芯片进行贸易调查，为特朗普加征关税铺路](/articles/voa/1010118.md)
@@ -596,8 +600,4 @@
 12-11 [以色列猛烈空袭叙利亚全境，但否认以军地面部队向大马士革挺进](/articles/voa/1010413.md)
 
 12-11 [美国制裁效果显现，中国11月对俄进出口双双大幅下降](/articles/voa/1010414.md)
-
-12-11 [台湾国防部披露解放军大规模海上部署 威胁程度为近年之最](/articles/voa/1010415.md)
-
-12-10 [特朗普效应显现：中国11月出口增幅腰斩，进口跌幅扩大](/articles/voa/1010416.md)
 
