--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-24 [菲律宾拟采购美国堤丰陆基导弹系统 遏制中国在南中国海强权](/articles/voa/1010113.md)
+
+12-24 [澳大利亚政府确定将向美国引渡曾训练解放军航母飞行员的前美军飞行员](/articles/voa/1010114.md)
+
 12-24 [李宜雪二度“被精神病”，中国网民炸锅质疑声四起](/articles/voa/1010115.md)
 
 12-24 [中国湖南常德驾车冲撞恶性案肇事者被判死缓，网民抱怨判得太轻](/articles/voa/1010116.md)
@@ -596,8 +600,4 @@
 12-11 [大批解放军机舰连日近逼台湾，似为“封锁台湾”恫吓行动一环](/articles/voa/1010411.md)
 
 12-11 [泽连斯基告诉特朗普，普京只害怕一个人](/articles/voa/1010412.md)
-
-12-11 [以色列猛烈空袭叙利亚全境，但否认以军地面部队向大马士革挺进](/articles/voa/1010413.md)
-
-12-11 [美国制裁效果显现，中国11月对俄进出口双双大幅下降](/articles/voa/1010414.md)
 
