--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-24 [瑞典：中国拒绝让检察官对涉海缆断裂事件的中国货船登船调查](/articles/voa/1010106.md)
+
 12-24 [发言人：前总统克林顿因发烧入院](/articles/voa/1010107.md)
 
 12-24 [专家敦促美国利用与台湾的后勤协定来反制中国军事胁迫](/articles/voa/1010108.md)
@@ -598,6 +600,4 @@
 12-11 [国际人权日，活动人士在中国驻英大使馆举行外抗议](/articles/voa/1010404.md)
 
 12-11 [美台宣布美台21世纪贸易倡议首批协议正式生效](/articles/voa/1010405.md)
-
-12-11 [美国制裁破坏全球防火墙的中国公司和个人，并起诉和悬赏通缉涉案中国公民](/articles/voa/1010406.md)
 
