--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-24 [朝鲜援俄军队为何伤亡惨重？](/articles/nyt/1042086.md)
+
 12-24 [美国对中国传统芯片启动贸易调查](/articles/nyt/1042087.md)
 
 12-23 [书评：“麻烦制造者”黎智英](/articles/nyt/1042088.md)
@@ -598,6 +600,4 @@
 9-13 [报告称WADA未“偏袒”中国，但指中国反兴奋剂机构违规](/articles/nyt/1042384.md)
 
 9-13 [众议院共和党人为何在大选前频繁对抗中国](/articles/nyt/1042385.md)
-
-9-13 [没有性生活的婚姻可能幸福吗](/articles/nyt/1042386.md)
 
