--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-24 [专家解读中国在台湾周边及第一岛链大规模演习意图：警告外力勿介入](/articles/voa/1010105.md)
+
 12-24 [瑞典：中国拒绝让检察官对涉海缆断裂事件的中国货船登船调查](/articles/voa/1010106.md)
 
 12-24 [发言人：前总统克林顿因发烧入院](/articles/voa/1010107.md)
@@ -598,6 +600,4 @@
 12-11 [叙利亚反政俯武装任命临时政府首脑](/articles/voa/1010403.md)
 
 12-11 [国际人权日，活动人士在中国驻英大使馆举行外抗议](/articles/voa/1010404.md)
-
-12-11 [美台宣布美台21世纪贸易倡议首批协议正式生效](/articles/voa/1010405.md)
 
