--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-24 [美舰时隔八年访问柬埔寨后驶离 日本将获云朗基地访问权](/articles/voa/1010104.md)
+
 12-24 [专家解读中国在台湾周边及第一岛链大规模演习意图：警告外力勿介入](/articles/voa/1010105.md)
 
 12-24 [瑞典：中国拒绝让检察官对涉海缆断裂事件的中国货船登船调查](/articles/voa/1010106.md)
@@ -598,6 +600,4 @@
 12-11 [两家中国公司因涉监控维吾尔人等侵犯人权行为而被美国实施贸易限制](/articles/voa/1010402.md)
 
 12-11 [叙利亚反政俯武装任命临时政府首脑](/articles/voa/1010403.md)
-
-12-11 [国际人权日，活动人士在中国驻英大使馆举行外抗议](/articles/voa/1010404.md)
 
