--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-24 [俄罗斯战场上的朝鲜士兵伤亡已逾千人](/articles/dw/1023302.md)
+
 12-24 [特朗普：控制格陵兰岛绝对必要](/articles/dw/1023303.md)
 
 12-23 [中国拒绝瑞典检方登上“伊鹏3号”调查](/articles/dw/1023304.md)
@@ -598,6 +600,4 @@
 11-24 [波罗的海电缆事件：瑞典加入丹麦监控中国船只](/articles/dw/1023600.md)
 
 11-24 [德国大选热门话题：乌克兰难民福利过多？](/articles/dw/1023601.md)
-
-11-24 [攻击俄罗斯境内目标 乌克兰获准使用哪些西方武器？](/articles/dw/1023602.md)
 
