--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-24 [以色列拦截来自也门的导弹 警告将“严厉打击”胡塞武装](/articles/voa/1010102.md)
+
 12-24 [无国界医生：南苏丹因难民激增和霍乱疫情“不堪重负](/articles/voa/1010103.md)
 
 12-24 [美舰时隔八年访问柬埔寨后驶离 日本将获云朗基地访问权](/articles/voa/1010104.md)
@@ -598,6 +600,4 @@
 12-11 [美防长在东京抨击中国的“胁迫行为”](/articles/voa/1010400.md)
 
 12-11 [后阿萨德时代的叙利亚：在伊斯兰主义反政府武装控制下，阿拉维派前途不定](/articles/voa/1010401.md)
-
-12-11 [两家中国公司因涉监控维吾尔人等侵犯人权行为而被美国实施贸易限制](/articles/voa/1010402.md)
 
