--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-24 [史料搬运工｜不肯生养孩子的南宋“愚民”](/articles/cdt/334192.md)
+
+12-24 [木蹊说｜600多万粉掉到4.4万，吴柳芳为何再次被“制裁”？](/articles/cdt/334194.md)
+
+12-24 [基本常识｜跟着苏州学辟谣：大量外资企业正在撤离苏州吗？](/articles/cdt/334196.md)
+
+12-24 [建设性意见｜退役运动员吴柳芳收到某某总局圣诞礼物：赶尽杀绝](/articles/cdt/334198.md)
+
 12-24 [结绳志｜在创伤的心灵地景中，辨认萦绕于当下的历史](/articles/cdt/334202.md)
 
 12-23 [每日一语 2024.12.23](/articles/cdt/334205.md)
@@ -592,12 +600,4 @@
 11-18 [人间三角｜这个社会可能已经瘫痪了](/articles/cdt/335383.md)
 
 11-18 [每日一语 2024.11.17](/articles/cdt/335386.md)
-
-11-17 [每日一语 2024.11.16](/articles/cdt/335394.md)
-
-11-17 [成都客｜无处可逃，不如创造](/articles/cdt/335396.md)
-
-11-17 [【404文库】新新默存｜血案背后，20起报复社会事件的惊人相似性](/articles/cdt/335406.md)
-
-11-17 [【网络民议】江苏一职业技术学院发生持刀伤人案件：接二连三，如何破解？](/articles/cdt/335409.md)
 
