--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-24 [大赦国际：释放厦门聚会案人权活动人士](/articles/dw/1023299.md)
+
 12-24 [客座评论：中共新生代接班人队伍浮出水面](/articles/dw/1023300.md)
 
 12-24 [中国财长：明年“增赤字 扩支出”](/articles/dw/1023301.md)
@@ -598,6 +600,4 @@
 11-25 [乌克兰放宽刑罚 鼓励逃兵重返前线](/articles/dw/1023597.md)
 
 11-25 [必须“适应新的现实”：大众坚持关闭德国工厂计划](/articles/dw/1023598.md)
-
-11-24 [美摄影家在柏林办展 批以色列“种族灭绝”引发争议](/articles/dw/1023599.md)
 
