--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-24 [中国矿产禁令将如何影响美国武器制造](/articles/voa/1010098.md)
+
 12-24 [菲律宾防长：必须部署美国中程导弹系统，“不接受他国否决”](/articles/voa/1010099.md)
 
 12-24 [孙韵：拜登政府时期的美中关系](/articles/voa/1010100.md)
@@ -598,6 +600,4 @@
 12-11 [美国从关岛进行首次弹道导弹拦截试验](/articles/voa/1010396.md)
 
 12-11 [朝鲜首次报道韩国戒严危机 韩国前防长被捕后自杀未遂](/articles/voa/1010397.md)
-
-12-11 [特朗普提名安德鲁·弗格森领导联邦贸易委员会](/articles/voa/1010398.md)
 
