--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-24 [丰田据称计划在上海独资建厂](/articles/dw/1023297.md)
+
 12-24 [俄罗斯“北斗星”货轮因机舱爆炸在地中海沉没](/articles/dw/1023298.md)
 
 12-24 [大赦国际：释放厦门聚会案人权活动人士](/articles/dw/1023299.md)
@@ -598,6 +600,4 @@
 11-25 [苹果CEO库克再度访华 强调中国市场重要性](/articles/dw/1023595.md)
 
 11-25 [美国加强在日菲军事部署 三艘航母已驶向亚洲](/articles/dw/1023596.md)
-
-11-25 [乌克兰放宽刑罚 鼓励逃兵重返前线](/articles/dw/1023597.md)
 
