--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-25 [【异闻观止】国家安全部：警惕评论区里的谍影重重](/articles/cdt/334190.md)
+
 12-24 [史料搬运工｜不肯生养孩子的南宋“愚民”](/articles/cdt/334192.md)
 
 12-24 [木蹊说｜600多万粉掉到4.4万，吴柳芳为何再次被“制裁”？](/articles/cdt/334194.md)
@@ -598,6 +600,4 @@
 11-18 [小河满了｜我们要在民间相互守望](/articles/cdt/335381.md)
 
 11-18 [人间三角｜这个社会可能已经瘫痪了](/articles/cdt/335383.md)
-
-11-18 [每日一语 2024.11.17](/articles/cdt/335386.md)
 
