--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+12-25 [债多不愁？北京拟明年增发三万亿元超长国债，应对通缩对抗特朗普](/articles/voa/1010092.md)
+
+12-25 [从NDAA看美台军事合作深化：防御威慑转向攻势战略？](/articles/voa/1010093.md)
+
+12-25 [港府平安夜悬赏捉拿海外人士 被通缉者无怨无悔坦然以对](/articles/voa/1010094.md)
+
 12-25 [日本首相石破茂强调加强日美同盟是地区安全关键，盼会晤特朗普](/articles/voa/1010095.md)
 
 12-25 [比亚迪巴西新厂工地被爆奴役中国工人，生存状况“令人震惊”](/articles/voa/1010096.md)
@@ -594,10 +600,4 @@
 12-12 [台湾要求北京停止对台军事恫吓和一切危害区域和平稳定的非理性行为](/articles/voa/1010390.md)
 
 12-12 [韩国戒严令事件调查扩大：搜查总统府遇阻，军警高官被捕，前防长自杀未遂](/articles/voa/1010391.md)
-
-12-11 [为应对特朗普关税压力，北京拟做出重大政策调整 允许人民币扩大贬值幅度](/articles/voa/1010392.md)
-
-12-11 [美推出新国家安全战略对抗“恶霸四国”，为新政府提供路线图](/articles/voa/1010393.md)
-
-12-11 [中国持续军演武吓 台湾陆委会：“双城论坛”有条件举办](/articles/voa/1010394.md)
 
