--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-25 [美警告香港金融机构勿与俄交易：国际金融中心地位面临存亡考验](/articles/voa/1010087.md)
+
 12-25 [越南在2024年国际展览会上签署价值2.86亿美元的防务合同](/articles/voa/1010088.md)
 
 12-25 [新的叙利亚当局表示武装团体将解散](/articles/voa/1010089.md)
@@ -598,6 +600,4 @@
 12-12 [联调局局长克里斯托弗·雷表示计划辞去职务](/articles/voa/1010385.md)
 
 12-12 [美国半年之内向中国派出第四架遣返包机 赴美庇护门槛恐越来越高](/articles/voa/1010386.md)
-
-12-12 [研究指中国在古巴的情报基地可收集高度详细的信息](/articles/voa/1010387.md)
 
