--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-25 [NASA探测器以前所未有的近距离飞越太阳](/articles/voa/1010083.md)
+
 12-25 [教宗启动2025禧年](/articles/voa/1010084.md)
 
 12-25 [年终报道：印中冰冻关系2024年出现了解冻](/articles/voa/1010085.md)
@@ -598,6 +600,4 @@
 12-12 [以色列呼吁采取行动保护叙利亚库尔德人](/articles/voa/1010381.md)
 
 12-12 [重开一蒙中边境口岸是为了方便中国采矿？](/articles/voa/1010382.md)
-
-12-12 [印第安纳州一名女子因出于种族仇恨袭击一名华裔女大学生而被判处监禁](/articles/voa/1010383.md)
 
