--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-25 [美国人开始繁忙旅行日之际，美航所有航班短暂停飞](/articles/voa/1010082.md)
+
 12-25 [NASA探测器以前所未有的近距离飞越太阳](/articles/voa/1010083.md)
 
 12-25 [教宗启动2025禧年](/articles/voa/1010084.md)
@@ -598,6 +600,4 @@
 12-12 [中俄北极合作为什么令美国和西方担忧？](/articles/voa/1010380.md)
 
 12-12 [以色列呼吁采取行动保护叙利亚库尔德人](/articles/voa/1010381.md)
-
-12-12 [重开一蒙中边境口岸是为了方便中国采矿？](/articles/voa/1010382.md)
 
