--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-25 [北美空防司令部：神秘无人机不会干扰圣诞老人的工作](/articles/voa/1010081.md)
+
 12-25 [美国人开始繁忙旅行日之际，美航所有航班短暂停飞](/articles/voa/1010082.md)
 
 12-25 [NASA探测器以前所未有的近距离飞越太阳](/articles/voa/1010083.md)
@@ -598,6 +600,4 @@
 12-12 [美司法部：一名中国公民因用无人机航拍美军基地而被捕](/articles/voa/1010379.md)
 
 12-12 [中俄北极合作为什么令美国和西方担忧？](/articles/voa/1010380.md)
-
-12-12 [以色列呼吁采取行动保护叙利亚库尔德人](/articles/voa/1010381.md)
 
