--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-25 [阿塞拜疆航空一客机在哈萨克斯坦境内坠毁](/articles/dw/1023295.md)
+
 12-25 [2025年中国将蝉联全球最大汽车出口国](/articles/dw/1023296.md)
 
 12-24 [丰田据称计划在上海独资建厂](/articles/dw/1023297.md)
@@ -598,6 +600,4 @@
 11-25 [马斯克与特朗普的利益冲突](/articles/dw/1023593.md)
 
 11-25 [川普二進宮：雙線作戰還是聯歐抗中？](/articles/dw/1023594.md)
-
-11-25 [苹果CEO库克再度访华 强调中国市场重要性](/articles/dw/1023595.md)
 
