--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-25 [日本外务大臣访中 宣布新签证措施、推动水产品解禁](/articles/voa/1010078.md)
+
 12-25 [中国谴责菲律宾防长发言 称其“恶意攻击中共”](/articles/voa/1010079.md)
 
 12-25 [驻冲绳美国海军陆战队部分迁至关岛：战略调整还是对华威慑新布局？](/articles/voa/1010080.md)
@@ -598,6 +600,4 @@
 12-12 [应对“混乱四重奏”：拜登政府就中俄朝伊安全威胁为继任者列出新方案](/articles/voa/1010376.md)
 
 12-12 [美众院通过2025国防授权法 共和党领袖：将“如激光般”聚焦应对中国威胁](/articles/voa/1010377.md)
-
-12-12 [布林肯前往中东，叙利亚探索后阿萨德时代的道路](/articles/voa/1010378.md)
 
