--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+12-25 [尹锡悦再次拒绝被传唤未到案](/articles/dw/1023292.md)
+
+12-25 [圣诞节起源地：冷冷清清的伯利恒](/articles/dw/1023293.md)
+
+12-25 [从叙利亚难民到德国小镇市长](/articles/dw/1023294.md)
+
 12-25 [阿塞拜疆航空一客机在哈萨克斯坦境内坠毁](/articles/dw/1023295.md)
 
 12-25 [2025年中国将蝉联全球最大汽车出口国](/articles/dw/1023296.md)
@@ -594,10 +600,4 @@
 11-25 [社民党提名肖尔茨为总理候选人](/articles/dw/1023590.md)
 
 11-25 [客座评论：特朗普会放弃台湾吗？](/articles/dw/1023591.md)
-
-11-25 [DHL货机在立陶宛坠毁 机上人员一死三伤](/articles/dw/1023592.md)
-
-11-25 [马斯克与特朗普的利益冲突](/articles/dw/1023593.md)
-
-11-25 [川普二進宮：雙線作戰還是聯歐抗中？](/articles/dw/1023594.md)
 
