--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+12-25 [日本将放宽中国公民入境签证措施](/articles/dw/1023290.md)
+
+12-25 [中国延长对欧盟白兰地反倾销调查](/articles/dw/1023291.md)
+
 12-25 [尹锡悦再次拒绝被传唤未到案](/articles/dw/1023292.md)
 
 12-25 [圣诞节起源地：冷冷清清的伯利恒](/articles/dw/1023293.md)
@@ -596,8 +600,4 @@
 11-26 [特朗普已经提名了哪些内阁成员？](/articles/dw/1023588.md)
 
 11-26 [反对中国向白兰地加征关税 欧盟向世贸递交诉状](/articles/dw/1023589.md)
-
-11-25 [社民党提名肖尔茨为总理候选人](/articles/dw/1023590.md)
-
-11-25 [客座评论：特朗普会放弃台湾吗？](/articles/dw/1023591.md)
 
