--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+12-25 [比亚迪巴西工地爆奴役中国工人丑闻](/articles/dw/1023287.md)
+
+12-25 [又哭又闹的宝宝音乐会 家长太喜欢](/articles/dw/1023288.md)
+
 12-25 [爱情没有保质期](/articles/dw/1023289.md)
 
 12-25 [日本将放宽中国公民入境签证措施](/articles/dw/1023290.md)
@@ -596,8 +600,4 @@
 11-26 [特朗普称上任即对中国加征10%、墨西哥加拿大25%的关税](/articles/dw/1023585.md)
 
 11-26 [一名前舞蹈演员在纽约起诉神韵](/articles/dw/1023586.md)
-
-11-26 [白紙兩週年：中國能迎來另一場大規模抗爭嗎？](/articles/dw/1023587.md)
-
-11-26 [特朗普已经提名了哪些内阁成员？](/articles/dw/1023588.md)
 
