--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-25 [日本外相访华 双方就恢复日本水产品进口取得共识](/articles/dw/1023286.md)
+
 12-25 [比亚迪巴西工地爆奴役中国工人丑闻](/articles/dw/1023287.md)
 
 12-25 [又哭又闹的宝宝音乐会 家长太喜欢](/articles/dw/1023288.md)
@@ -598,6 +600,4 @@
 11-26 [中国“芯”？中国“心”！华为再推新手机](/articles/dw/1023584.md)
 
 11-26 [特朗普称上任即对中国加征10%、墨西哥加拿大25%的关税](/articles/dw/1023585.md)
-
-11-26 [一名前舞蹈演员在纽约起诉神韵](/articles/dw/1023586.md)
 
