--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-26 [教宗圣诞文告敦促各国人民“让武器噤声，超越分歧”](/articles/voa/1010063.md)
+
 12-26 [中日关系明年可望改善？专家：美国或成关键因素](/articles/voa/1010064.md)
 
 12-26 [以哈接近达成停火协议之际 双方相互指责对方使停火努力复杂化](/articles/voa/1010065.md)
@@ -598,6 +600,4 @@
 12-13 [中国电动汽车称霸巴西市场引起各界关注](/articles/voa/1010361.md)
 
 12-13 [中国单方面免签一年后，政经目的达到了吗？](/articles/voa/1010362.md)
-
-12-13 [中国消费“城乡冷热不均” 分析：城市青年失业率高冲击消费能力](/articles/voa/1010363.md)
 
