--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-26 [中美对抗只会令世界更加混乱](/articles/nyt/1042084.md)
+
 12-24 [美国钢铁公司被收购有利于与中国竞争](/articles/nyt/1042085.md)
 
 12-24 [朝鲜援俄军队为何伤亡惨重？](/articles/nyt/1042086.md)
@@ -598,6 +600,4 @@
 9-14 [中国宣布提高法定退休年龄](/articles/nyt/1042382.md)
 
 9-13 [泰勒·斯威夫特支持贺锦丽，“顶流”明星能否左右选情](/articles/nyt/1042383.md)
-
-9-13 [报告称WADA未“偏袒”中国，但指中国反兴奋剂机构违规](/articles/nyt/1042384.md)
 
