--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-26 [台湾国防部警告：在野党推动的财划法可能对安全造成“严重冲击”](/articles/voa/1010057.md)
+
 12-26 [叙利亚沙姆解放组织战斗人员与阿萨德支持者发生冲突，至少六名战斗人员丧生](/articles/voa/1010058.md)
 
 12-26 [波罗的海又发生缆线损坏事件：芬兰-爱沙尼亚电缆断电](/articles/voa/1010059.md)
@@ -598,6 +600,4 @@
 12-13 [再度被评为《时代》杂志年度人物 特朗普敲响纽交所开市钟](/articles/voa/1010355.md)
 
 12-13 [反政府武装释放了在叙利亚被囚禁七个月的美国人](/articles/voa/1010356.md)
-
-12-13 [拜登发布备忘录，成立跨机构工作组，监测和处理中国对美国人员的审查与恐吓](/articles/voa/1010357.md)
 
