--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-26 [基本常识｜吃土豆来纪念志愿军，我认为不太合适](/articles/cdt/334174.md)
+
 12-26 [个人记忆库｜《环球时报》发起征文，要我们写“中美友好合作故事”](/articles/cdt/334178.md)
 
 12-26 [七志士｜天下奇闻：法院对律师用上了辣椒水，事涉知名“远洋捕捞”案](/articles/cdt/334183.md)
@@ -598,6 +600,4 @@
 11-19 [【CDTV】习近平第三次访问“秘bì鲁”，还是没能记住正确发音](/articles/cdt/335360.md)
 
 11-18 [有病要讀書plus｜江苏职校那位刀手的“自白书”问题](/articles/cdt/335362.md)
-
-11-18 [青年志Youthology｜为杀夫女性和失地女性辩护的40年](/articles/cdt/335366.md)
 
