--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-26 [中国官媒释“友好”信号 专文吁中美加强合作](/articles/voa/1010055.md)
+
 12-26 [拜登和特朗普传递截然不同的圣诞信息](/articles/voa/1010056.md)
 
 12-26 [台湾国防部警告：在野党推动的财划法可能对安全造成“严重冲击”](/articles/voa/1010057.md)
@@ -598,6 +600,4 @@
 12-13 [特朗普提名卡丽·莱克为美国之音台长人选](/articles/voa/1010353.md)
 
 12-13 [间谍行动还是战争行为？涉华“盐台风”震撼美国政坛](/articles/voa/1010354.md)
-
-12-13 [再度被评为《时代》杂志年度人物 特朗普敲响纽交所开市钟](/articles/voa/1010355.md)
 
