--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+12-26 [台湾民众党主席柯文哲被检方起诉](/articles/dw/1023283.md)
+
+12-26 [圣诞前夕袭击案撼动马堡 众人齐聚哀悼](/articles/dw/1023284.md)
+
 12-26 [日外相訪華示好：中日為何正快速修復關係？](/articles/dw/1023285.md)
 
 12-25 [日本外相访华 双方就恢复日本水产品进口取得共识](/articles/dw/1023286.md)
@@ -596,8 +600,4 @@
 11-26 [大食堂的机器人厨师](/articles/dw/1023581.md)
 
 11-26 [美国特别检察官放弃对特朗普的两大刑事诉讼](/articles/dw/1023582.md)
-
-11-26 [债务刹车：维持还是松绑？](/articles/dw/1023583.md)
-
-11-26 [中国“芯”？中国“心”！华为再推新手机](/articles/dw/1023584.md)
 
