--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-26 [“都想和我做朋友”特朗普就职典礼捐款破纪录](/articles/dw/1023282.md)
+
 12-26 [台湾民众党主席柯文哲被检方起诉](/articles/dw/1023283.md)
 
 12-26 [圣诞前夕袭击案撼动马堡 众人齐聚哀悼](/articles/dw/1023284.md)
@@ -598,6 +600,4 @@
 11-26 [乌克兰更新：俄罗斯迅速推进 发起创纪录无人机袭击](/articles/dw/1023580.md)
 
 11-26 [大食堂的机器人厨师](/articles/dw/1023581.md)
-
-11-26 [美国特别检察官放弃对特朗普的两大刑事诉讼](/articles/dw/1023582.md)
 
