--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-26 [模拟应对中国军事升级 台湾总统府首次举办社会防卫韧性桌上推演](/articles/voa/1010054.md)
+
 12-26 [中国官媒释“友好”信号 专文吁中美加强合作](/articles/voa/1010055.md)
 
 12-26 [拜登和特朗普传递截然不同的圣诞信息](/articles/voa/1010056.md)
@@ -598,6 +600,4 @@
 12-13 [北约秘书长：俄罗斯准备与乌克兰和欧洲进行长期对抗](/articles/voa/1010352.md)
 
 12-13 [特朗普提名卡丽·莱克为美国之音台长人选](/articles/voa/1010353.md)
-
-12-13 [间谍行动还是战争行为？涉华“盐台风”震撼美国政坛](/articles/voa/1010354.md)
 
