--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-26 [货殖新传｜巴西营救160名中国“奴工”，我看着却像找茬……](/articles/cdt/334168.md)
+
+12-26 [就叫熊太行也行｜对待擦边，将军大人还真是个体面人呢！](/articles/cdt/334170.md)
+
 12-26 [基本常识｜吃土豆来纪念志愿军，我认为不太合适](/articles/cdt/334174.md)
 
 12-26 [个人记忆库｜《环球时报》发起征文，要我们写“中美友好合作故事”](/articles/cdt/334178.md)
@@ -596,8 +600,4 @@
 11-18 [冷月冷言｜突发事件信息发布不能被垄断](/articles/cdt/335357.md)
 
 11-18 [观人随笔｜真正的灾难，是一个社会走丢了反思能力](/articles/cdt/335359.md)
-
-11-19 [【CDTV】习近平第三次访问“秘bì鲁”，还是没能记住正确发音](/articles/cdt/335360.md)
-
-11-18 [有病要讀書plus｜江苏职校那位刀手的“自白书”问题](/articles/cdt/335362.md)
 
