--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+12-26 [世界银行上调中国今年GDP增长预测至4.9%](/articles/dw/1023277.md)
+
+12-26 [事实核查：2024年最奇怪的假新闻](/articles/dw/1023278.md)
+
+12-26 [达赖喇嘛称自己可能会活到110岁](/articles/dw/1023279.md)
+
 12-26 [泽连斯基撤换驻德大使 乌外交官大洗牌](/articles/dw/1023280.md)
 
 12-26 [预测：中国电动车销量2025年将超燃油车](/articles/dw/1023281.md)
@@ -594,10 +600,4 @@
 11-27 [大众汽车及伙伴宣布出售在新疆的分公司](/articles/dw/1023575.md)
 
 11-27 [3D打印牛排 肉类替代品新革命!](/articles/dw/1023576.md)
-
-11-27 [中國防長董軍傳涉貪遭查 外交部：捕風捉影](/articles/dw/1023577.md)
-
-11-27 [媒體：中國防長董軍涉貪腐遭調查](/articles/dw/1023578.md)
-
-11-27 [女性發起「性罷工」：韓國4B運動如何影響美國？](/articles/dw/1023579.md)
 
