--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-26 [台湾民众党主席柯文哲涉贪污遭起诉 检方求刑合计28年6个月](/articles/voa/1010051.md)
+
 12-26 [中国上调去年GDP增长数据，世行对中国今明两年经济增长作出微调](/articles/voa/1010052.md)
 
 12-26 [印孟两国恶梦：中国批准兴建雅鲁藏布江上全球最大水电站大坝](/articles/voa/1010053.md)
@@ -598,6 +600,4 @@
 12-13 [中国男足前主帅李铁涉贪判刑20年 国家体育总局原局长苟仲文被“双开＂](/articles/voa/1010349.md)
 
 12-13 [美防长：持续注意解放军在台海行动，将竭力助台取得自卫能力](/articles/voa/1010350.md)
-
-12-13 [美国宣布向乌克兰提供5亿美元新军援](/articles/voa/1010351.md)
 
