--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-27 [惊骇：阿塞拜疆客机遭俄罗斯防空导弹击伤后迫降坠毁](/articles/voa/1010049.md)
+
+12-27 [拉夫罗夫：俄愿与美合作，但特朗普政府要迈出第一步](/articles/voa/1010050.md)
+
 12-26 [台湾民众党主席柯文哲涉贪污遭起诉 检方求刑合计28年6个月](/articles/voa/1010051.md)
 
 12-26 [中国上调去年GDP增长数据，世行对中国今明两年经济增长作出微调](/articles/voa/1010052.md)
@@ -596,8 +600,4 @@
 12-13 [安德鲁王子的中国伙伴被控是间谍 英国禁止他入境](/articles/voa/1010347.md)
 
 12-13 [中国回应在台湾周边大规模军演 称打独促统“不会缺席”](/articles/voa/1010348.md)
-
-12-13 [中国男足前主帅李铁涉贪判刑20年 国家体育总局原局长苟仲文被“双开＂](/articles/voa/1010349.md)
-
-12-13 [美防长：持续注意解放军在台海行动，将竭力助台取得自卫能力](/articles/voa/1010350.md)
 
