--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-27 [每日一语 2024.12.26](/articles/cdt/334155.md)
+
+12-27 [C计划｜2024年朋友圈撕裂报告](/articles/cdt/334157.md)
+
 12-27 [刑辩中坚｜郭睿：锡林浩特法院与辣椒水](/articles/cdt/334162.md)
 
 12-26 [真实故事计划｜吃爱国饭的外籍博主，挤满东南亚](/articles/cdt/334164.md)
@@ -596,8 +600,4 @@
 11-19 [建设性意见｜疫情防控遗留的那些问题，至今仍在影响我们的生活](/articles/cdt/335340.md)
 
 11-19 [【CDT网语】频发的无差别伤人事件，迅速被叫停的夜骑狂欢（2024年第6期）](/articles/cdt/335345.md)
-
-11-18 [每日一语 2024.11.18](/articles/cdt/335351.md)
-
-11-18 [四环青年｜村道新换井盖一碰就碎，劣质井盖哪来的？](/articles/cdt/335353.md)
 
