--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-27 [西坡原创｜吴柳芳已经是一个符号了](/articles/cdt/334151.md)
+
+12-27 [基本常识｜人民日报征集中美友好故事，环球时报提中日关系改善](/articles/cdt/334153.md)
+
 12-27 [每日一语 2024.12.26](/articles/cdt/334155.md)
 
 12-27 [C计划｜2024年朋友圈撕裂报告](/articles/cdt/334157.md)
@@ -596,8 +600,4 @@
 11-19 [冰点周刊｜职校乱象频出原因何在，政府又应该负责什么](/articles/cdt/335336.md)
 
 11-19 [法律圆桌｜“他死了就再也没有人知道了”：无差别杀人的背后](/articles/cdt/335338.md)
-
-11-19 [建设性意见｜疫情防控遗留的那些问题，至今仍在影响我们的生活](/articles/cdt/335340.md)
-
-11-19 [【CDT网语】频发的无差别伤人事件，迅速被叫停的夜骑狂欢（2024年第6期）](/articles/cdt/335345.md)
 
