--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+12-27 [中国压力不断加大，台湾试图明确特朗普政府的对台政策](/articles/voa/1010035.md)
+
+12-27 [在后阿萨德时代的叙利亚，库尔德对立派系寻求统一代表](/articles/voa/1010036.md)
+
+12-27 [特朗普为何要“夺回”巴拿马运河？巴拿马和美中两国的恩恩怨怨](/articles/voa/1010037.md)
+
 12-27 [日本寻求在特朗普第二任期开始前改善与中国的关系](/articles/voa/1010038.md)
 
 12-27 [香港人开心指数创七年新低 社工指反修例运动后社会充斥无力感](/articles/voa/1010039.md)
@@ -594,10 +600,4 @@
 12-14 [中国政府拆除热比娅大厦，清除知名维吾尔异见人士的遗产](/articles/voa/1010333.md)
 
 12-14 [马克龙任命中间派政坛老手弗朗索瓦·贝鲁为法国新总理](/articles/voa/1010334.md)
-
-12-14 [美议员与官员：中国制无人机对美国国家安全构成威胁](/articles/voa/1010335.md)
-
-12-14 [韩国反对党领袖呼吁执政党支持弹劾动议，周六表决可能性增加](/articles/voa/1010336.md)
-
-12-14 [美国如何化解中国对关键矿产实施的禁运令？](/articles/voa/1010337.md)
 
