--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-27 [富士康为何斥巨资在中国以外建厂？](/articles/nyt/1042080.md)
+
 12-27 [台湾民众党主席柯文哲涉贪腐案：检方求刑28年6个月](/articles/nyt/1042081.md)
 
 12-26 [中国反驳游泳队禁药指控的数据引发争议](/articles/nyt/1042082.md)
@@ -598,6 +600,4 @@
 9-18 [从孙雯案看中国海外秘密干预行动模式](/articles/nyt/1042378.md)
 
 9-18 [“垃圾时间”唱衰中国经济未来，暗批中共统治](/articles/nyt/1042379.md)
-
-9-18 [特朗普再遭暗杀未遂，美国政治暴力加剧](/articles/nyt/1042380.md)
 
