--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-27 [美疾控中心：在美国首起人类禽流感重症病例病毒样本中发现突变](/articles/voa/1010031.md)
+
 12-27 [专家：俄罗斯防空炮火可能导致阿塞拜疆客机坠毁](/articles/voa/1010032.md)
 
 12-27 [叙利亚新当局逮捕曾掌管臭名昭著的赛德纳亚监狱的前政府官员](/articles/voa/1010033.md)
@@ -598,6 +600,4 @@
 12-14 [拜登与G7领导人线上会面，重点讨论乌克兰和叙利亚问题](/articles/voa/1010329.md)
 
 12-14 [特朗普的个性化、非传统外交对北京是否会奏效？](/articles/voa/1010330.md)
-
-12-14 [当地媒体：俄军逼近一座乌东重镇](/articles/voa/1010331.md)
 
