--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-27 [特朗普提名的国防部副部长人选或加大对台湾施压，要求提升防卫开支](/articles/voa/1010030.md)
+
 12-27 [美疾控中心：在美国首起人类禽流感重症病例病毒样本中发现突变](/articles/voa/1010031.md)
 
 12-27 [专家：俄罗斯防空炮火可能导致阿塞拜疆客机坠毁](/articles/voa/1010032.md)
@@ -598,6 +600,4 @@
 12-14 [布林肯访问伊拉克和土耳其，讨论叙利亚问题](/articles/voa/1010328.md)
 
 12-14 [拜登与G7领导人线上会面，重点讨论乌克兰和叙利亚问题](/articles/voa/1010329.md)
-
-12-14 [特朗普的个性化、非传统外交对北京是否会奏效？](/articles/voa/1010330.md)
 
