--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-27 [网传中国新型隐形战机试飞 掀海內外军迷热议](/articles/voa/1010028.md)
+
 12-27 [韩国证实一朝鲜士兵遭乌军俘虏 朝军援俄以来首见](/articles/voa/1010029.md)
 
 12-27 [特朗普提名的国防部副部长人选或加大对台湾施压，要求提升防卫开支](/articles/voa/1010030.md)
@@ -598,6 +600,4 @@
 12-14 [英国意大利日本成立合资公司，联手研制新一代隐形战机](/articles/voa/1010326.md)
 
 12-14 [中国官员与美国学者在华府谈美中关系 戴博：左右两国关系未来的是“特朗普-习近平2.0”](/articles/voa/1010327.md)
-
-12-14 [布林肯访问伊拉克和土耳其，讨论叙利亚问题](/articles/voa/1010328.md)
 
