--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-27 [展望2025：那些可能改变世界的事件](/articles/nyt/1042078.md)
+
 12-27 [阿塞拜疆航空客机坠毁，调查指向俄罗斯防空系统](/articles/nyt/1042079.md)
 
 12-27 [富士康为何斥巨资在中国以外建厂？](/articles/nyt/1042080.md)
@@ -598,6 +600,4 @@
 9-19 [深圳日本人学校男童遭持刀袭击身亡](/articles/nyt/1042376.md)
 
 9-19 [出生率下降、老龄化加剧，中国“银发经济”迎来春天](/articles/nyt/1042377.md)
-
-9-18 [从孙雯案看中国海外秘密干预行动模式](/articles/nyt/1042378.md)
 
