--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-27 [韩国称被乌军俘虏的朝鲜士兵已伤重而亡](/articles/dw/1023270.md)
+
 12-27 [“都想和我做朋友” 特朗普就职典礼捐款破纪录](/articles/dw/1023271.md)
 
 12-26 [阿塞拜疆失事客机或遭俄防空系统击落？](/articles/dw/1023272.md)
@@ -598,6 +600,4 @@
 11-28 [赖清德出访前夕 台湾演练“整体防空作战计划”](/articles/dw/1023568.md)
 
 11-28 [中美換囚  梁成運等三美國人獲釋](/articles/dw/1023569.md)
-
-11-27 [以色列与真主党停火生效 民众踏上返乡路](/articles/dw/1023570.md)
 
