--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-28 [珠海驾车撞人惨案宣判，肇事者樊某因罪行“极其”严重被判死刑](/articles/voa/1010016.md)
+
+12-28 [世界银行上调中国经济增长预测，但结构性改革成关键议题](/articles/voa/1010017.md)
+
 12-28 [泽连斯基：乌克兰已向叙利亚运送首批粮食援助](/articles/voa/1010018.md)
 
 12-28 [中国拟出台《民营经济促进法》提振信心，产学界:关键在执行，否则沦为“安慰剂”](/articles/voa/1010019.md)
@@ -596,8 +600,4 @@
 12-14 [《中国制造2025》十年收官，名亡实存？](/articles/voa/1010314.md)
 
 12-14 [路透独家：巩固对乌克兰支持 美财长耶伦称不排除制裁中国银行](/articles/voa/1010315.md)
-
-12-14 [快讯：韩国国会通过总统尹锡悦弹劾案](/articles/voa/1010316.md)
-
-12-14 [软外交抗衡中国影响力 巴布亚新几内亚加入澳大利亚橄榄球联赛](/articles/voa/1010317.md)
 
