--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-28 [白宫：第九家电信公司遭到中国大规模间谍行动的攻击](/articles/voa/1010013.md)
+
+12-28 [白宫：朝鲜军队在俄乌战争前线伤亡惨重](/articles/voa/1010014.md)
+
 12-28 [中国因财困而向富人开刀会加剧资本外流吗？](/articles/voa/1010015.md)
 
 12-28 [珠海驾车撞人惨案宣判，肇事者樊某因罪行“极其”严重被判死刑](/articles/voa/1010016.md)
@@ -596,8 +600,4 @@
 12-15 [部分驻日美军依美日协议开始离开冲绳基地迁往关岛](/articles/voa/1010311.md)
 
 12-14 [专访冯崇义：中澳关系是怎样从热络走向隔阂的？](/articles/voa/1010312.md)
-
-12-14 [尹锡悦面临弹劾誓言决不放弃，其政治命运交由宪法法院决定](/articles/voa/1010313.md)
-
-12-14 [《中国制造2025》十年收官，名亡实存？](/articles/voa/1010314.md)
 
