--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+12-28 [NASA探测器创下最接近太阳的记录，目前状态“安全”并正常运行](/articles/voa/1010005.md)
+
+12-28 [特朗普要求最高法院暂停有可能即将封禁TikTok的法律](/articles/voa/1010006.md)
+
+12-28 [报道：奴工指称曝光后，巴西停止向比亚迪发放临时工作签证](/articles/voa/1010007.md)
+
 12-28 [中国启动对进口牛肉的调查](/articles/voa/1010008.md)
 
 12-28 [数万叙利亚难民从土耳其返回家园](/articles/voa/1010009.md)
@@ -594,10 +600,4 @@
 12-15 [法庭文件显示：美国广播公司向特朗普图书馆支付1500万美元以和解诉讼](/articles/voa/1010303.md)
 
 12-15 [美国官员：东北地区上空出现的无人机大部分是有人驾驶飞机](/articles/voa/1010304.md)
-
-12-15 [佩洛西在德国美军医院做髋关节置换手术](/articles/voa/1010305.md)
-
-12-15 [特朗普任命真相社交首席执行官努涅斯领导白宫情报委员会](/articles/voa/1010306.md)
-
-12-15 [泽连斯基：俄罗斯“在库尔斯克使用朝鲜军人”](/articles/voa/1010307.md)
 
