--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-28 [商议27年俄罗斯态度终松动 中吉乌铁路开工](/articles/voa/1010002.md)
+
 12-28 [特朗普反移民政策施压 墨西哥3个月内在美墨边境拘留近50万非法移民](/articles/voa/1010003.md)
 
 12-28 [四艘中国海警船进入金门限制水域遭台湾海巡队驱离](/articles/voa/1010004.md)
@@ -598,6 +600,4 @@
 12-15 [美联储预计在拜登任内最后一次会议降息](/articles/voa/1010300.md)
 
 12-15 [美联储预计在拜登任内最后一次会议降息](/articles/voa/1010301.md)
-
-12-15 [韩国代理总统与拜登通话 强调两国同盟牢不可摧](/articles/voa/1010302.md)
 
