--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-28 [涉奴役工人争议 巴西暂停对比亚迪发放工签](/articles/dw/1023258.md)
+
 12-28 [Tiktok在美或能翻身？特朗普要求最高法院暂缓禁令](/articles/dw/1023259.md)
 
 12-28 [报告显示印度移民在德国收入最高，叙利亚人最低](/articles/dw/1023260.md)
@@ -598,6 +600,4 @@
 11-29 [港人看川普重返白宮：盼延續「避風港」計劃](/articles/dw/1023556.md)
 
 11-29 [客座評論：「中國香港」樣子如何，日子也將如何](/articles/dw/1023557.md)
-
-11-29 [北京證實中美換囚 中方換回國安部官員](/articles/dw/1023558.md)
 
