--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-28 [巴勒斯坦人称以军拘留加沙北部一医院院长及几十名医护人员](/articles/voa/1010000.md)
+
 12-28 [尹锡悦与接任者接连遭弹劾 动摇外界对韩国经济信心](/articles/voa/1010001.md)
 
 12-28 [商议27年俄罗斯态度终松动 中吉乌铁路开工](/articles/voa/1010002.md)
@@ -598,6 +600,4 @@
 12-15 [路透：俄罗斯正从叙利亚撤军但不会完全撤出](/articles/voa/1010298.md)
 
 12-15 [中国外长警告法国“中欧贸易战”的危险](/articles/voa/1010299.md)
-
-12-15 [美联储预计在拜登任内最后一次会议降息](/articles/voa/1010300.md)
 
