--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-29 [民运团体发起“救援王炳章”全球联动活动：敦促中共释放被关押22年的民主斗士](/articles/voa/1009996.md)
+
+12-29 [台陆委会主委：两岸现状已改变，威胁渗透“常态化”](/articles/voa/1009997.md)
+
 12-28 [基辅称俄军无人机机库被摧毁，乌军突击部队在俄境内处境艰难](/articles/voa/1009998.md)
 
 12-28 [坏也坏不到哪儿去？新一年美中关系展望](/articles/voa/1009999.md)
@@ -596,8 +600,4 @@
 12-15 [韩国朝野领导人寻求缓解尹锡悦遭弹劾后政治动荡](/articles/voa/1010294.md)
 
 12-15 [中国货币政策转向宽松，或仍难挽救经济颓势](/articles/voa/1010295.md)
-
-12-15 [叙利亚内战方休 东突厥斯坦战士调转枪头指向中国](/articles/voa/1010296.md)
-
-12-15 [日本外相拟本月下旬访问中国 再次要求履行水产品进口](/articles/voa/1010297.md)
 
