--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-29 [台湾网红卧底拍纪录片揭露中共透过台籍“中间人”进行统战](/articles/voa/1009995.md)
+
 12-29 [民运团体发起“救援王炳章”全球联动活动：敦促中共释放被关押22年的民主斗士](/articles/voa/1009996.md)
 
 12-29 [台陆委会主委：两岸现状已改变，威胁渗透“常态化”](/articles/voa/1009997.md)
@@ -598,6 +600,4 @@
 12-15 [以色列认为来自大马士革的威胁仍在升高](/articles/voa/1010293.md)
 
 12-15 [韩国朝野领导人寻求缓解尹锡悦遭弹劾后政治动荡](/articles/voa/1010294.md)
-
-12-15 [中国货币政策转向宽松，或仍难挽救经济颓势](/articles/voa/1010295.md)
 
