--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-29 [中美贸易战升温 马来西亚面临“洗产地”风险](/articles/voa/1009991.md)
+
+12-29 [土耳其外长与布林肯讨论与叙利亚新政府合作的必要性](/articles/voa/1009992.md)
+
 12-29 [阿富汗部队对巴基斯坦的致命空袭进行报复](/articles/voa/1009993.md)
 
 12-29 [蒲黄榆说: 致命的捕捞——中国的暴力泛滥和经济通缩](/articles/voa/1009994.md)
@@ -596,8 +600,4 @@
 12-16 [基辅在莫斯科轰炸后进行反击，乌克兰无人机袭击俄罗斯车臣地区](/articles/voa/1010289.md)
 
 12-16 [中国培训肯尼亚国营媒体记者意图何在？](/articles/voa/1010290.md)
-
-12-16 [联合国特使呼吁解除制裁，帮助叙利亚重建](/articles/voa/1010291.md)
-
-12-16 [特朗普对TikTok会手下留情？他提名的对华鹰派高官未必赞同](/articles/voa/1010292.md)
 
