--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-29 [美国各地恶劣的天气导致假期数千架航班延误 龙卷风酿至少2死](/articles/voa/1009985.md)
+
+12-29 [美两大电信商证实成为中国黑客“盐台风”攻击目标 强调网络目前安全](/articles/voa/1009986.md)
+
 12-29 [特朗普上台前 朝鲜提出将落实“最强硬应对美国战略”](/articles/voa/1009987.md)
 
 12-29 [韩国一客机失事 罹难者恐多达179人](/articles/voa/1009988.md)
@@ -596,8 +600,4 @@
 12-16 [即将上任的国家安全顾问要求解释美国无人机的目击事件](/articles/voa/1010283.md)
 
 12-16 [由于因加沙产生的紧张关系，以色列将关闭驻爱尔兰大使馆](/articles/voa/1010284.md)
-
-12-16 [朝鲜媒体报道韩国总统尹锡悦被弹劾](/articles/voa/1010285.md)
-
-12-16 [教宗方济各首次访问法属科西嘉岛](/articles/voa/1010286.md)
 
