--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-29 [阿塞拜疆总统：俄罗斯向其开火是客机坠毁原因](/articles/dw/1023246.md)
+
 12-29 [俄外长：俄罗斯将取消对部署中短程核导弹的暂停令](/articles/dw/1023247.md)
 
 12-29 [归途叙利亚：希望与恐惧并存](/articles/dw/1023248.md)
@@ -598,6 +600,4 @@
 12-1 [赖清德访邦交国过境夏威夷 引北京强烈反应](/articles/dw/1023544.md)
 
 11-30 [德国社民党启动选战  民意调查有所回暖](/articles/dw/1023545.md)
-
-11-30 [朝鲜誓言挺俄 泽连斯基暗示可结束“热战”但有前提](/articles/dw/1023546.md)
 
