--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-30 [哈萨克斯坦坠机发生了什么？](/articles/dw/1023244.md)
+
 12-29 [济州航空事故179人罹难 韩国宣布举国哀悼一周](/articles/dw/1023245.md)
 
 12-29 [阿塞拜疆总统：俄罗斯向其开火是客机坠毁原因](/articles/dw/1023246.md)
@@ -598,6 +600,4 @@
 12-1 [研究：2040年之前 德国每年需引入28.8万外籍劳工](/articles/dw/1023542.md)
 
 12-1 [德国大厂爆裁员潮 景气面临寒冬](/articles/dw/1023543.md)
-
-12-1 [赖清德访邦交国过境夏威夷 引北京强烈反应](/articles/dw/1023544.md)
 
