--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-30 [阿塞拜疆指责俄试图掩盖民航机坠毁真相，呼吁莫斯科承认罪责](/articles/voa/1009982.md)
+
 12-29 [俄罗斯外长称将放弃单方面遵守《美苏中导条约》](/articles/voa/1009983.md)
 
 12-29 [格鲁吉亚新总统在政治对峙中就职](/articles/voa/1009984.md)
@@ -598,6 +600,4 @@
 12-16 [习近平新号召：“刀刃向内”消灭腐败](/articles/voa/1010280.md)
 
 12-16 [联合国将召集专家 试图解决利比亚政治僵局](/articles/voa/1010281.md)
-
-12-16 [泽连斯基宣布拟提供叙利亚粮食援助](/articles/voa/1010282.md)
 
