--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-30 [一个反台小粉红的转变：从倡导动物保护困境看两岸价值观的差异](/articles/voa/1009981.md)
+
 12-30 [阿塞拜疆指责俄试图掩盖民航机坠毁真相，呼吁莫斯科承认罪责](/articles/voa/1009982.md)
 
 12-29 [俄罗斯外长称将放弃单方面遵守《美苏中导条约》](/articles/voa/1009983.md)
@@ -598,6 +600,4 @@
 12-16 [韩国宪法法院开始审核尹锡悦弹劾案](/articles/voa/1010279.md)
 
 12-16 [习近平新号召：“刀刃向内”消灭腐败](/articles/voa/1010280.md)
-
-12-16 [联合国将召集专家 试图解决利比亚政治僵局](/articles/voa/1010281.md)
 
