--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-30 [克罗地亚举行总统大选 对北约和欧盟持批评态度的现任总统受青睐](/articles/voa/1009974.md)
+
+12-30 [中国光伏产业在美欧市场受阻后转战巴基斯坦](/articles/voa/1009975.md)
+
 12-30 [德克萨斯州和密西西比州的龙卷风造成两死六伤，恶劣天气系统同时向东移动](/articles/voa/1009976.md)
 
 12-30 [叙利亚犹太社区可以再次参观世界上最古老的犹太教堂之一](/articles/voa/1009977.md)
@@ -596,8 +600,4 @@
 12-17 [中国全面推行“个人养老金”，民众质疑是“合法割韭菜”难解养老金缺口](/articles/voa/1010272.md)
 
 12-17 [中国消费者捂紧荷包不花钱，11月份零售放缓，房价进一步下滑](/articles/voa/1010273.md)
-
-12-16 [首批“地表最强”M1A2T坦克抵台，将如何提升台湾战力？](/articles/voa/1010274.md)
-
-12-16 [挪威宣布向乌克兰提供2.42亿美元的军事援助](/articles/voa/1010275.md)
 
