--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-30 [以色列医院说，内塔尼亚胡已成功接受前列腺手术](/articles/voa/1009972.md)
+
+12-30 [飞机降落事故发生后，哈利法克斯机场航班暂停](/articles/voa/1009973.md)
+
 12-30 [克罗地亚举行总统大选 对北约和欧盟持批评态度的现任总统受青睐](/articles/voa/1009974.md)
 
 12-30 [中国光伏产业在美欧市场受阻后转战巴基斯坦](/articles/voa/1009975.md)
@@ -596,8 +600,4 @@
 12-17 [乌克兰称在俄库尔斯克州前线打死打伤至少30名朝鲜军人](/articles/voa/1010270.md)
 
 12-17 [上海副市长抵达台北参加双城论坛 遭台湾独派团体抗议](/articles/voa/1010271.md)
-
-12-17 [中国全面推行“个人养老金”，民众质疑是“合法割韭菜”难解养老金缺口](/articles/voa/1010272.md)
-
-12-17 [中国消费者捂紧荷包不花钱，11月份零售放缓，房价进一步下滑](/articles/voa/1010273.md)
 
