--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-30 [美国前总统卡特去世，享年100岁](/articles/nyt/1042075.md)
+
 12-30 [中美关系需要“马斯克+斯威夫特”](/articles/nyt/1042076.md)
 
 12-30 [关于韩国济州航空空难，我们所知道的](/articles/nyt/1042077.md)
@@ -598,6 +600,4 @@
 9-20 [位于中美科技战核心的芯片制造商：中芯国际](/articles/nyt/1042373.md)
 
 9-19 [美国家庭领养中国孩子的时代结束了，他们如何看待这一切](/articles/nyt/1042374.md)
-
-9-19 [现代“特洛伊木马”：详解黎巴嫩寻呼机爆炸案](/articles/nyt/1042375.md)
 
