--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-30 [北青深一度｜两年被家暴16次，受害者小谢的自我救赎](/articles/cdt/334087.md)
+
+12-30 [早见Hayami｜独属润人的创痛感](/articles/cdt/334090.md)
+
+12-30 [每日一语 2024.12.29](/articles/cdt/334092.md)
+
+12-30 [基本常识｜2024未完待续：油罐车洗干净了没？](/articles/cdt/334094.md)
+
 12-29 [馬世研｜伊朗解除互联网限制](/articles/cdt/334106.md)
 
 12-28 [基本常识｜珠海撞人案动机公布，会震慑犯罪而不是引发效仿](/articles/cdt/334115.md)
@@ -592,12 +600,4 @@
 11-21 [基本常识｜一名日本人被当成汉奸，被警察当众扒了球衣，还被韩国媒体报道……](/articles/cdt/335237.md)
 
 11-21 [拾光景观｜超百亿投资，老干部休养基地](/articles/cdt/335240.md)
-
-11-21 [每日一语 2024.11.20](/articles/cdt/335243.md)
-
-11-22 [何桂蓝｜香港民主派初选47人案陈词](/articles/cdt/335248.md)
-
-11-21 [倪刃｜为什么会有人怀念计划经济？](/articles/cdt/335254.md)
-
-11-21 [育娲人口研究｜中国生育成本报告2024版](/articles/cdt/335257.md)
 
