--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-30 [电缆线损坏事件后 芬兰在波罗的海海底发现拖痕](/articles/voa/1009969.md)
+
 12-30 [韩国联合侦查组提请法院批准逮捕尹锡悦](/articles/voa/1009970.md)
 
 12-30 [世界领袖对美国前总统卡特去世的反应](/articles/voa/1009971.md)
@@ -598,6 +600,4 @@
 12-17 [年终报道: 中欧关系在冷风中摇摆](/articles/voa/1010267.md)
 
 12-17 [美军空袭叙利亚境内伊斯兰国组织，打死12名武装分子](/articles/voa/1010268.md)
-
-12-17 [聿文视界：尹锡悦困兽犹斗，韩政局变动或令北京窃喜](/articles/voa/1010269.md)
 
