--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,13 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-30 [老爸讲科学｜ 抵制洋节，请从元旦开始](/articles/cdt/334074.md)
+
+12-30 [學人Scholar｜劳东燕：家长都承受不住社会压力，为什么认为孩子能承受得住？](/articles/cdt/334077.md)
+
 12-30 [【404文库】猫盟CFCA｜雅鲁藏布江的水电站，会消灭西藏最后的老虎吗？](/articles/cdt/334082.md)
+
+12-30 [特正经的张某某｜逻辑的作用：2023年谈“美帝虐待大熊猫必是谣言”](/articles/cdt/334084.md)
 
 12-30 [北青深一度｜两年被家暴16次，受害者小谢的自我救赎](/articles/cdt/334087.md)
 
@@ -594,10 +600,4 @@
 11-22 [风声OPINION｜钟睒睒喊话要求张一鸣道歉：平台对网暴行为是否负有责任？](/articles/cdt/335216.md)
 
 11-22 [冰川思享号｜底层互害有多可怕，底层互助就有多温暖](/articles/cdt/335218.md)
-
-11-22 [老干体v｜获上面肯定，浙江回击「远洋捕捞」](/articles/cdt/335220.md)
-
-11-22 [每日一语 2024.11.21](/articles/cdt/335224.md)
-
-11-21 [基本常识｜一名日本人被当成汉奸，被警察当众扒了球衣，还被韩国媒体报道……](/articles/cdt/335237.md)
 
