--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-30 [评论风云：马斯克触动了德国的哪根神经？](/articles/dw/1023239.md)
+
 12-30 [专访：“飞行仍然是最安全的出行方式之一”](/articles/dw/1023240.md)
 
 12-30 [回顧2024國際年度大事](/articles/dw/1023241.md)
@@ -598,6 +600,4 @@
 12-2 [卸任前改變態度 拜登宣布特赦兒子亨特](/articles/dw/1023537.md)
 
 12-1 [墙外文摘：金马奖，要为娄烨担忧吗？](/articles/dw/1023538.md)
-
-12-1 [着眼洛比托铁路走廊 拜登任内首次访非](/articles/dw/1023539.md)
 
