--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,11 +3,13 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-30 [【404文库】三联生活周刊｜邯郸事件一审宣判：未曾预料的乡村留守儿童悲剧](/articles/cdt/334072.md)
+
 12-30 [老爸讲科学｜ 抵制洋节，请从元旦开始](/articles/cdt/334074.md)
 
 12-30 [學人Scholar｜劳东燕：家长都承受不住社会压力，为什么认为孩子能承受得住？](/articles/cdt/334077.md)
 
-12-30 [【404文库】猫盟CFCA｜雅鲁藏布江的水电站，会消灭西藏最后的老虎吗？](/articles/cdt/334082.md)
+12-30 [【404文库】【旧文重温】猫盟CFCA｜雅鲁藏布江的水电站，会消灭西藏最后的老虎吗？](/articles/cdt/334082.md)
 
 12-30 [特正经的张某某｜逻辑的作用：2023年谈“美帝虐待大熊猫必是谣言”](/articles/cdt/334084.md)
 
@@ -598,6 +600,4 @@
 11-22 [旧闻评论｜钟睒睒越痛苦，张一鸣越麻烦](/articles/cdt/335214.md)
 
 11-22 [风声OPINION｜钟睒睒喊话要求张一鸣道歉：平台对网暴行为是否负有责任？](/articles/cdt/335216.md)
-
-11-22 [冰川思享号｜底层互害有多可怕，底层互助就有多温暖](/articles/cdt/335218.md)
 
