--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-30 [聿文视界：腐败内生于中共，当局反腐实是徒劳一场](/articles/voa/1009967.md)
+
 12-30 [墨西哥当局在秘密坟墓中发现15具男性尸体](/articles/voa/1009968.md)
 
 12-30 [电缆线损坏事件后 芬兰在波罗的海海底发现拖痕](/articles/voa/1009969.md)
@@ -598,6 +600,4 @@
 12-17 [即将离任的美驻华大使伯恩斯为美中关系留下了什么？](/articles/voa/1010265.md)
 
 12-17 [威斯康星州一私立基督教会学校发生枪击案，导致五死多伤](/articles/voa/1010266.md)
-
-12-17 [年终报道: 中欧关系在冷风中摇摆](/articles/voa/1010267.md)
 
