--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-31 [台海兵凶战危，开发商将推出一款想象模拟台海战争的桌面游戏](/articles/voa/1009964.md)
+
+12-31 [美国前总统卡特百岁辞世 两岸对其功过褒贬两极](/articles/voa/1009965.md)
+
 12-30 [特朗普就职前，美国宣布再向基辅提供近60亿美元额外军援和预算支持](/articles/voa/1009966.md)
 
 12-30 [聿文视界：腐败内生于中共，当局反腐实是徒劳一场](/articles/voa/1009967.md)
@@ -596,8 +600,4 @@
 12-17 [欧盟制裁向俄军提供支持的中国公司和朝鲜国防相](/articles/voa/1010262.md)
 
 12-17 [总理特鲁多面临支持率下滑之际，加拿大财长辞职](/articles/voa/1010263.md)
-
-12-17 [加州男子因经营中国产妇赴美“生育旅游”而被判处41个月监禁](/articles/voa/1010264.md)
-
-12-17 [即将离任的美驻华大使伯恩斯为美中关系留下了什么？](/articles/voa/1010265.md)
 
