--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-31 [印度火箭启动太空对接使命](/articles/voa/1009958.md)
+
+12-31 [越洋电话年终特别报道：小罗快跑](/articles/voa/1009959.md)
+
 12-31 [中共打造经济光明论统一战线 良心学者恐惧缄默避撞红线](/articles/voa/1009960.md)
 
 12-31 [德国拟出资6270万美元加强叙利亚学校和其他项目](/articles/voa/1009961.md)
@@ -596,8 +600,4 @@
 12-17 [一名17岁学生在威斯康星州一所基督教学校开枪打死三人打伤六人，枪手死亡](/articles/voa/1010256.md)
 
 12-17 [点名大疆、道通智能 美国会持续推进议案禁止中国制无人机](/articles/voa/1010257.md)
-
-12-17 [五角大楼最新评估：朝鲜军队加入俄罗斯对乌克兰的战斗](/articles/voa/1010258.md)
-
-12-17 [中国大规模海上演习目的何在？专家：试图恫吓特朗普与台湾保持距离](/articles/voa/1010259.md)
 
