--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-31 [委内瑞拉因风靡网上的挑战活动导致青少年死亡而对TikTok罚款一千万美元](/articles/voa/1009952.md)
+
+12-31 [叙利亚选举时间表引发辩论](/articles/voa/1009953.md)
+
 12-31 [美财政部：中国资助的黑客侵入了财政部工作站](/articles/voa/1009954.md)
 
 12-31 [展望中国2025年的七大趋势](/articles/voa/1009955.md)
@@ -596,8 +600,4 @@
 12-17 [德国总理朔尔茨未通过议会信任投票 明年2月将提前选举](/articles/voa/1010250.md)
 
 12-17 [欧洲12国表示将共同“打击与威慑”俄罗斯影子舰队](/articles/voa/1010251.md)
-
-12-17 [美国人口普查局将难民纳入移民统计](/articles/voa/1010252.md)
-
-12-17 [国际劳工组织：全球经济中移民作用至关重要](/articles/voa/1010253.md)
 
