--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-31 [邯郸初中生杀人案判决出炉 太轻还是太重？](/articles/dw/1023237.md)
+
 12-30 [美国前总统卡特逝世 国内外表达敬意](/articles/dw/1023238.md)
 
 12-30 [评论风云：马斯克触动了德国的哪根神经？](/articles/dw/1023239.md)
@@ -598,6 +600,4 @@
 12-2 [外交官被逐：中国威胁立陶宛或采取反制](/articles/dw/1023535.md)
 
 12-2 [肖尔茨访问乌克兰并承诺新一轮军援](/articles/dw/1023536.md)
-
-12-2 [卸任前改變態度 拜登宣布特赦兒子亨特](/articles/dw/1023537.md)
 
