--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-31 [法轮功神韵艺术团的宣传阵地：《大纪元时报》](/articles/nyt/1042071.md)
+
 12-31 [拜登政府称中国黑客入侵美国财政部](/articles/nyt/1042072.md)
 
 12-30 [美国在关税战中握得一手好牌](/articles/nyt/1042073.md)
@@ -598,6 +600,4 @@
 9-23 [中国将逐步解禁日本水产品进口](/articles/nyt/1042369.md)
 
 9-20 [如果中国不再努力拯救世界，会发生什么？](/articles/nyt/1042370.md)
-
-9-20 [我从中国被领养，至今仍在寻找自我和归属](/articles/nyt/1042371.md)
 
