--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-31 [马斯克与习近平的关系对美国构成国家安全风险](/articles/nyt/1042069.md)
+
 12-31 [法轮功神韵艺术团如何利用宗教狂热赚取2.66亿美元](/articles/nyt/1042070.md)
 
 12-31 [法轮功神韵艺术团的宣传阵地：《大纪元时报》](/articles/nyt/1042071.md)
@@ -598,6 +600,4 @@
 9-23 [以色列和真主党冲突继续升级，引发全面战争担忧](/articles/nyt/1042367.md)
 
 9-23 [以色列的寻呼机攻击改变了世界](/articles/nyt/1042368.md)
-
-9-23 [中国将逐步解禁日本水产品进口](/articles/nyt/1042369.md)
 
