--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-31 [习近平称明年将实施“更积极的”宏观经济政策](/articles/voa/1009944.md)
+
 12-31 [中俄领导人互致新年贺电 习近平：两国始终携手前行](/articles/voa/1009945.md)
 
 12-31 [叙利亚寻求与乌克兰建立战略关系](/articles/voa/1009946.md)
@@ -598,6 +600,4 @@
 12-17 [菲律宾向南中国海争议海域坐滩军舰运送补给品，未遭中方舰船阻拦](/articles/voa/1010242.md)
 
 12-17 [中国向埃及出售电子战系统 分析: 中国在下一盘大棋](/articles/voa/1010243.md)
-
-12-17 [蒲黄榆说：以进促稳？官僚衰退下的中国经济危机](/articles/voa/1010244.md)
 
