--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-31 [老萧杂说｜本号无新年献词](/articles/cdt/334052.md)
+
 12-31 [青年志Youthology｜2024性别观察：姐姐们做到了，我们也可以！](/articles/cdt/334055.md)
 
 12-31 [阜成门六号院｜期待一个不再沉闷，人人扬眉吐气的2025](/articles/cdt/334057.md)
@@ -598,6 +600,4 @@
 11-24 [【CDT周报】第196期：政治的专政，让每个个体都躺倒在砧板上](/articles/cdt/335195.md)
 
 11-22 [每日一语 2024.11.21](/articles/cdt/335199.md)
-
-11-22 [建设性意见｜向杭州市监局实名举报农夫山泉纯净水涉嫌危害公众健康](/articles/cdt/335202.md)
 
