--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-31 [美方:中国黑客入侵财政部 中方:“无端指控”](/articles/dw/1023233.md)
+
 12-31 [德国总理肖尔茨：“我们可以让2025年成为丰收年”](/articles/dw/1023234.md)
 
 12-31 [2025实现新年目标的六个窍门](/articles/dw/1023235.md)
@@ -598,6 +600,4 @@
 12-2 [美國公佈新一輪對華半導體出口管制 140家中企被列入清单](/articles/dw/1023531.md)
 
 12-2 [反对减薪裁员 大众汽车德国工人举行大罢工](/articles/dw/1023532.md)
-
-12-2 [这个冬天有点冷 欧洲再次为天然气发愁](/articles/dw/1023533.md)
 
