--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-31 [韩国代理总统崔相穆迫于反对党压力任命两名宪法法院法官](/articles/voa/1009942.md)
+
+12-31 [世卫呼吁中国提供更多新冠病毒溯源数据，北京辩称分享的数据最多](/articles/voa/1009943.md)
+
 12-31 [习近平称明年将实施“更积极的”宏观经济政策](/articles/voa/1009944.md)
 
 12-31 [中俄领导人互致新年贺电 习近平：两国始终携手前行](/articles/voa/1009945.md)
@@ -596,8 +600,4 @@
 12-18 [美国《新闻法》闯关受阻：谁在阻挡媒体记者的“护身符”？](/articles/voa/1010240.md)
 
 12-18 [受特朗普胜选影响，中国资本市场11月资金外流创历史新高](/articles/voa/1010241.md)
-
-12-17 [菲律宾向南中国海争议海域坐滩军舰运送补给品，未遭中方舰船阻拦](/articles/voa/1010242.md)
-
-12-17 [中国向埃及出售电子战系统 分析: 中国在下一盘大棋](/articles/voa/1010243.md)
 
