--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-31 [德国空中的士Volocopter申请破产 传吉利或为收购方](/articles/dw/1023230.md)
+
 12-31 [习近平发新年贺词 连续四年喊话台湾](/articles/dw/1023231.md)
 
 12-31 [宪政史首次：韩国法院签发对尹锡悦逮捕令](/articles/dw/1023232.md)
@@ -598,6 +600,4 @@
 12-3 [金砖国家货币：特朗普的关税威胁合理吗？](/articles/dw/1023528.md)
 
 12-2 [抓女生打屁股 德国小岛“取消”旧俗引争议](/articles/dw/1023529.md)
-
-12-2 [尼泊尔提出“一带一路”新框架 总理奥利上任后首访北京](/articles/dw/1023530.md)
 
