--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+1-1 [传言得到证实：彭博报道中国公务员加薪悄然进行](/articles/voa/1009939.md)
+
+1-1 [习近平新年贺词称中国经济“回暖向好” 国内生产总值超过130万亿元](/articles/voa/1009940.md)
+
 12-31 [贸易风险上升之际，中国12月制造业活动增速放缓](/articles/voa/1009941.md)
 
 12-31 [韩国代理总统崔相穆迫于反对党压力任命两名宪法法院法官](/articles/voa/1009942.md)
@@ -596,8 +600,4 @@
 12-18 [美国制裁为朝鲜政权提供资金的洗钱网络](/articles/voa/1010237.md)
 
 12-18 [云南伊斯兰学者频遭逮捕 各界担心中国按新疆模式建“回族集中营”](/articles/voa/1010238.md)
-
-12-18 [台沪双城论坛登场 上海释善意推团客赴台，论坛内外争议不断](/articles/voa/1010239.md)
-
-12-18 [美国《新闻法》闯关受阻：谁在阻挡媒体记者的“护身符”？](/articles/voa/1010240.md)
 
