--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+1-1 [电影情报处｜2024，中国电影评分彻底失效](/articles/cdt/333994.md)
+
+1-1 [草菇炖鸡｜「艰难时世，相濡以沫」2024年劳动权益事件盘点](/articles/cdt/334045.md)
+
 12-31 [老萧杂说｜本号无新年献词](/articles/cdt/334052.md)
 
 12-31 [青年志Youthology｜2024性别观察：姐姐们做到了，我们也可以！](/articles/cdt/334055.md)
@@ -596,8 +600,4 @@
 11-23 [【敏感词库】秘鲁的秘为啥读bì、超20个“献忠”词组、薄瓜瓜](/articles/cdt/335190.md)
 
 11-23 [【404文库】“闭上眼睛，鬼怪并不会因此遁去”（外二篇）](/articles/cdt/335192.md)
-
-11-24 [【CDT周报】第196期：政治的专政，让每个个体都躺倒在砧板上](/articles/cdt/335195.md)
-
-11-22 [每日一语 2024.11.21](/articles/cdt/335199.md)
 
