--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+1-1 [联合国报告指责以军对加沙袭击导致整个医疗系统濒临崩溃](/articles/voa/1009936.md)
+
+1-1 [中国金融和房产开发从业者人数锐减，昔日黄金产业人才艰困求“上岸”](/articles/voa/1009937.md)
+
+1-1 [法国对叙境内伊斯兰国发动空袭，大马士革政治取向仍存变数](/articles/voa/1009938.md)
+
 1-1 [传言得到证实：彭博报道中国公务员加薪悄然进行](/articles/voa/1009939.md)
 
 1-1 [习近平新年贺词称中国经济“回暖向好” 国内生产总值超过130万亿元](/articles/voa/1009940.md)
@@ -594,10 +600,4 @@
 12-18 [被指控为中国间谍的律师对英国情报机构的诉讼败诉](/articles/voa/1010234.md)
 
 12-18 [欧盟就罗马尼亚总统选举的保障措施调查TikTok](/articles/voa/1010235.md)
-
-12-18 [阿萨德倒台重创俄罗斯声望，彰显衰落或已不可逆转](/articles/voa/1010236.md)
-
-12-18 [美国制裁为朝鲜政权提供资金的洗钱网络](/articles/voa/1010237.md)
-
-12-18 [云南伊斯兰学者频遭逮捕 各界担心中国按新疆模式建“回族集中营”](/articles/voa/1010238.md)
 
