--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+1-1 [每日一语 2024.12.31](/articles/cdt/333989.md)
+
+1-1 [蔚青学者说｜2024，纪念学术圈那些早逝的灵魂](/articles/cdt/333992.md)
+
 1-1 [电影情报处｜2024，中国电影评分彻底失效](/articles/cdt/333994.md)
 
 1-1 [草菇炖鸡｜「艰难时世，相濡以沫」2024年劳动权益事件盘点](/articles/cdt/334045.md)
@@ -299,6 +303,8 @@
 
 12-13 [三联生活周刊｜货币政策罕见大转向，会给普通人带来哪些重要影响？](/articles/cdt/334662.md)
 
+1-1 [【中国哭墙】谢谢这个世界曾有你（12月1日-12月31日，2024年）](/articles/cdt/334664.md)
+
 12-13 [【404文库】“老板心情不好，今日店休；怕鬼，今天休息”（外二篇）](/articles/cdt/334683.md)
 
 12-16 [【年终专题】“中文互联网上的内容每年都以断崖式的速度在锐减”……2024年度404文章](/articles/cdt/334684.md)
@@ -594,10 +600,4 @@
 11-24 [医学界｜遭7次电击治疗后，一位跨性别者起诉医院](/articles/cdt/335173.md)
 
 11-23 [老萧杂说｜对于无差别伤害，人们出现“失语症”，是因为什么？](/articles/cdt/335179.md)
-
-11-23 [新新默存｜温克坚：华夏再无春晖——哀悼华春辉先生](/articles/cdt/335181.md)
-
-11-23 [【敏感词库】秘鲁的秘为啥读bì、超20个“献忠”词组、薄瓜瓜](/articles/cdt/335190.md)
-
-11-23 [【404文库】“闭上眼睛，鬼怪并不会因此遁去”（外二篇）](/articles/cdt/335192.md)
 
