--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+1-1 [长平观察：马斯克“干预”德国大选，习近平让他这样干了吗？](/articles/dw/1023225.md)
+
+1-1 [过境协议到期 俄罗斯停止经由乌克兰向欧洲输送天然气](/articles/dw/1023226.md)
+
 1-1 [2025年德国新政府面临哪些挑战？](/articles/dw/1023227.md)
 
 1-1 [德语媒体：中国软件 中国核弹 皆是威胁](/articles/dw/1023228.md)
@@ -596,8 +600,4 @@
 12-3 [报复美国新一轮芯片战  中国收紧出口管制](/articles/dw/1023523.md)
 
 12-3 [德国达克斯指数首次突破2万点](/articles/dw/1023524.md)
-
-12-3 [你敢信？ “史上最贵香蕉”就这样被吃掉了？ ！](/articles/dw/1023525.md)
-
-12-3 [叙利亚内战中几个重要的“为什么”](/articles/dw/1023526.md)
 
