--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-1 [中指数据显示中国新房房价12月份微升，但二手房房价下跌](/articles/voa/1009925.md)
+
 1-1 [电影行业低迷加剧 2024年中国票房收入跳水](/articles/voa/1009926.md)
 
 1-1 [美国制裁俄罗斯和伊朗实体 因其针对美国选民进行虚假信息活动](/articles/voa/1009927.md)
@@ -598,6 +600,4 @@
 12-18 [俄罗斯拘留涉杀害俄军生化部队司令的嫌疑人](/articles/voa/1010223.md)
 
 12-18 [因应特朗普或重启朝核谈判 韩国正制定路线图](/articles/voa/1010224.md)
-
-12-18 [迎战中国电动汽车激烈竞争 日本本田与日产传正在进行初步的合并谈判](/articles/voa/1010225.md)
 
