--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+1-2 [阅后即瞎｜写给2025：墙破之处，就是旷野](/articles/cdt/333985.md)
+
+1-2 [徐潜川｜2024年，关于黄雪琴案，我发过的朋友圈](/articles/cdt/333986.md)
+
 1-1 [每日一语 2024.12.31](/articles/cdt/333989.md)
 
 1-1 [蔚青学者说｜2024，纪念学术圈那些早逝的灵魂](/articles/cdt/333992.md)
@@ -596,8 +600,4 @@
 11-24 [【CDT关注】歪脑｜伴废墟而居——新冠疫情四年后，武汉“原爆点”上的华安里社区](/articles/cdt/335166.md)
 
 11-24 [【重温】布鲁金斯学会｜中国新疆的压迫制度是如何发展？我们又要如何遏制它？](/articles/cdt/335168.md)
-
-11-24 [BIE别的女孩｜隐秘的角落：被家暴的性少数群体](/articles/cdt/335170.md)
-
-11-25 [【CDT报告汇】罗德岛大学：2024世界人权状况糟糕，中国与利比亚并列倒数第十（外二篇）](/articles/cdt/335172.md)
 
