--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-2 [年终报道：在英国的香港倡议者怎样看伦敦未来的对华政策？](/articles/voa/1009916.md)
+
 1-2 [俄罗斯无人机元旦袭击基辅造成两人丧生；乌克兰停止过境输送俄天然气](/articles/voa/1009917.md)
 
 1-2 [以色列空袭加沙北部和中部 导致17人死亡](/articles/voa/1009918.md)
@@ -598,6 +600,4 @@
 12-19 [美参院通过新年度《国防授权法》 下一步送交白宫](/articles/voa/1010214.md)
 
 12-19 [学历造假风波发酵 澳门高校将拒收中国非高考学生](/articles/voa/1010215.md)
-
-12-19 [印中特别代表北京会谈达成六点共识，双边紧张关系进一步缓解](/articles/voa/1010216.md)
 
