--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+1-2 [《华邮》：美国官员表示中国政府黑客入侵了美财政部负责制裁事务的办公室](/articles/voa/1009909.md)
+
+1-2 [特斯拉电动皮卡在拉斯维加斯特朗普酒店外起火导致1死7伤](/articles/voa/1009910.md)
+
+1-2 [黑山发生重大枪击事件，至少10人被凶手打死](/articles/voa/1009911.md)
+
+1-2 [近20年惨案盘点：新奥尔良元旦驾车撞人事件是又一场以车辆为武器的致命袭击](/articles/voa/1009912.md)
+
 1-2 [巴勒斯坦权力机构暂停半岛台在其境内运营](/articles/voa/1009913.md)
 
 1-2 [中国支持的选举引发对缅甸“消极和平”的担忧](/articles/voa/1009914.md)
@@ -592,12 +600,4 @@
 12-19 [美联储下调基准利率二十五个基点，但预计明年降息幅度会较小](/articles/voa/1010207.md)
 
 12-19 [尽管受到中国制裁，鲁比奥表示有信心以国务卿身份与北京接触](/articles/voa/1010208.md)
-
-12-19 [美国最高法院将听取TikTok要求停止禁令的诉讼请求](/articles/voa/1010209.md)
-
-12-19 [美中军舰柬国对望 三边防务关系将如何演变？](/articles/voa/1010210.md)
-
-12-19 [陈金平对密谋充当中国政府的非法代理人表示认罪](/articles/voa/1010211.md)
-
-12-19 [中情局长伯恩斯在新的卡塔尔会谈中寻求以色列与哈马斯停火](/articles/voa/1010212.md)
 
