--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-3 [台海进入新年后不平静，解放军在台湾周边海空域进行今年首次“战备警巡”](/articles/voa/1009898.md)
+
 1-3 [中国对巴拿马运河的渗透为何令美国担忧？](/articles/voa/1009899.md)
 
 1-3 [为应对心理精神疾病飙升，中国确定2025-2027为精神卫生服务年](/articles/voa/1009900.md)
@@ -598,6 +600,4 @@
 12-20 [“学霸就餐区”惹议 凸显中国逐利教育下的“唯分数”思维](/articles/voa/1010196.md)
 
 12-19 [欧洲海底电缆事件调查新进展：北欧四国代表获准登上中国涉嫌货船](/articles/voa/1010197.md)
-
-12-19 [普京称俄敢与美国导弹对决，俄军在乌克兰战场快速推进](/articles/voa/1010198.md)
 
