--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+1-3 [《鱿鱼游戏2》遭遇红灯：剧情停滞不前](/articles/nyt/1042059.md)
+
+1-3 [韩国官员尝试拘捕总统尹锡悦未果，双方僵持数小时](/articles/nyt/1042060.md)
+
 1-3 [美国考虑对中国无人机颁布禁令](/articles/nyt/1042061.md)
 
 1-3 [当中美关系不再拥有“小院高墙”](/articles/nyt/1042062.md)
@@ -596,8 +600,4 @@
 9-25 [危险碰撞、强力水炮：中国如何在南海与菲律宾对峙](/articles/nyt/1042357.md)
 
 9-25 [拜登任内最后一次联大演讲：警告全球处于“拐点”](/articles/nyt/1042358.md)
-
-9-25 [中美电池竞赛，美国还有机会吗？](/articles/nyt/1042359.md)
-
-9-25 [中国调查美国PVH集团，称其涉嫌“歧视”新疆产品](/articles/nyt/1042360.md)
 
