--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+1-3 [中国发改委高官：增发超长期国债应对多变的外部环境](/articles/voa/1009880.md)
+
+1-3 [美中科技战升级：中国拟加强对电动车锂电池技术出口限制](/articles/voa/1009881.md)
+
 1-3 [德法外长访大马士革 会见叙利亚新领导人](/articles/voa/1009882.md)
 
 1-3 [2024年全球商业航班事故逾300人罹难 中国民航局要求加强风险评估](/articles/voa/1009883.md)
@@ -596,8 +600,4 @@
 12-20 [马来西亚称将重启搜寻失踪的马航MH370残骸](/articles/voa/1010178.md)
 
 12-20 [与中国竞争 澳大利亚宣布上亿美元援助 加大对所罗门群岛警务支持](/articles/voa/1010179.md)
-
-12-20 [美國2024財年遣返无证移民逾27万 创10年新高](/articles/voa/1010180.md)
-
-12-20 [五角大楼：在阿萨德倒台前，驻叙利亚的美军人数已翻倍](/articles/voa/1010181.md)
 
