--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+1-4 [拜登向战斗英雄和急救人员颁发荣誉勋章和勇气勋章](/articles/voa/1009861.md)
+
+1-4 [聚焦中国：拜登国安顾问卸任前访问印度](/articles/voa/1009862.md)
+
+1-4 [两起新年致命事件后，即将接连举办重大国事活动的华盛顿处于“威胁升高”环境中](/articles/voa/1009863.md)
+
+1-4 [分析：韩国政治动荡对中国有利](/articles/voa/1009864.md)
+
 1-4 [德法外长访问大马士革，敦促叙利亚展开“包容性”权力过渡](/articles/voa/1009865.md)
 
 1-4 [美国新年驾车撞人惨案后，中国网民将美军基地描述为“恐袭”策源地](/articles/voa/1009866.md)
@@ -592,12 +600,4 @@
 12-21 [美政府换届在即 台北AIT处长确认美台伙伴关系“坚如磐石”](/articles/voa/1010159.md)
 
 12-21 [立陶宛在与中国的关系上面临艰难平衡](/articles/voa/1010160.md)
-
-12-21 [专家：美国对无处不在的中国黑客行为应对迟缓](/articles/voa/1010161.md)
-
-12-21 [美众议院通过了维持联邦政府运转的临时支出法案](/articles/voa/1010162.md)
-
-12-21 [网络战与心理战结合：中国试图依靠“认知域作战”扩大主导地位](/articles/voa/1010163.md)
-
-12-21 [“热钱”净流出创单月新高 中国救市“组合拳”成外资提款机?](/articles/voa/1010164.md)
 
