--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+1-4 [果壳｜那个被大厂抄袭的小鸡词典，败诉了，也解散了](/articles/cdt/333914.md)
+
 1-4 [融观天下｜语言苍白，内容空洞——评2025年《南方周末》新年献词](/articles/cdt/333918.md)
 
 1-4 [【网络民议】最歧视中国人的其实是他们的政府](/articles/cdt/333926.md)
@@ -598,6 +600,4 @@
 11-27 [【404维修站】地球公民金建国｜一则通报，让打人者成了英雄](/articles/cdt/335082.md)
 
 11-27 [竹不倒｜还有什么底线是我们不能“超越”的？](/articles/cdt/335084.md)
-
-11-27 [听晖道来｜比亚迪被供应商扇了一巴掌](/articles/cdt/335085.md)
 
