--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+1-4 [为什么拜登和特朗普都反对新日铁收购美国钢铁公司？](/articles/dw/1023201.md)
+
+1-4 [应对特朗普贸易政策 欧洲威胁提高美企税收](/articles/dw/1023202.md)
+
 1-4 [欧盟筹划新支付系统 抗衡Paypal、支付宝](/articles/dw/1023203.md)
 
 1-4 [台湾国安部门：中国正在加大认知作战力度](/articles/dw/1023204.md)
@@ -596,8 +600,4 @@
 12-5 [日本清酒列联合国“非物质文化遗产”](/articles/dw/1023499.md)
 
 12-5 [尹锡悦误判权力引发动荡  韩国经济及国际地位受冲击](/articles/dw/1023500.md)
-
-12-5 [尹锡悦误判权力引发政治动荡  韩国经济及国际地位遭受冲击](/articles/dw/1023501.md)
-
-12-5 [尼泊尔宣布与中国签署一带一路合作框架协议](/articles/dw/1023502.md)
 
