--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+1-5 [三联生活周刊｜“基层女性”王慧玲：成为“女权博主”这三年](/articles/cdt/333912.md)
+
 1-4 [果壳｜那个被大厂抄袭的小鸡词典，败诉了，也解散了](/articles/cdt/333914.md)
 
 1-4 [融观天下｜语言苍白，内容空洞——评2025年《南方周末》新年献词](/articles/cdt/333918.md)
@@ -598,6 +600,4 @@
 11-27 [听晖道来｜今天，为十六年前的那个年轻人写一点东西](/articles/cdt/335081.md)
 
 11-27 [【404维修站】地球公民金建国｜一则通报，让打人者成了英雄](/articles/cdt/335082.md)
-
-11-27 [竹不倒｜还有什么底线是我们不能“超越”的？](/articles/cdt/335084.md)
 
