--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+1-5 [拜登要赶在特朗普就职前下令永久性禁止开采美国近海油气](/articles/voa/1009850.md)
+
+1-5 [中国公务员普遍加薪引争议：刺激消费还是加剧分化？](/articles/voa/1009851.md)
+
 1-5 [呼应新质战斗力？解放军论文称中国军用5G实战部署已就绪](/articles/voa/1009852.md)
 
 1-5 [美司法部致函最高法，请求驳回特朗普延后执行TikTok禁令的要求](/articles/voa/1009853.md)
@@ -596,8 +600,4 @@
 12-21 [美国查出向华为提供台积电芯片的公司，准备将其列入黑名单](/articles/voa/1010148.md)
 
 12-21 [当“刀刃向内”遇上“集体领导”分析:中共党报与军报论战无助经济恢复](/articles/voa/1010149.md)
-
-12-21 [教宗方济各发布圣诞文告抨击以色列“残酷”空袭加沙](/articles/voa/1010150.md)
-
-12-21 [黎智英是怎样的“麻烦制造者”？](/articles/voa/1010151.md)
 
