--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+1-5 [台湾：中国正加倍努力利用虚假信息破坏民主](/articles/voa/1009848.md)
+
 1-5 [中国菜市场大火导致八人死亡，15人受伤](/articles/voa/1009849.md)
 
 1-5 [拜登要赶在特朗普就职前下令永久性禁止开采美国近海油气](/articles/voa/1009850.md)
@@ -598,6 +600,4 @@
 12-22 [巴西一辆满载乘客的大巴与卡车相撞致37人死亡](/articles/voa/1010146.md)
 
 12-22 [乌军无人机再发力：千里奔袭喀山，击中多幢高楼，机场一度关闭](/articles/voa/1010147.md)
-
-12-21 [美国查出向华为提供台积电芯片的公司，准备将其列入黑名单](/articles/voa/1010148.md)
 
